--- a/関心の分離について.md
+++ b/関心の分離について.md
@@ -1,370 +1,155 @@
-# 関心の分離について - Hidariude プロジェクト分析
+# 関心の分離について - Hidariude プロジェクト分析（実装マッピング付き）
 
 ## 概要
 
-このドキュメントでは、Hidariude Java Web アプリケーションにおける関心の分離（Separation of Concerns）について詳細に分析し、アーキテクチャの特徴、各レイヤーの責任、処理の流れ、および改善点について述べます。
+このドキュメントは、Hidariude Java Web アプリケーションの関心の分離（Separation of Concerns）を、実際のディレクトリ構成・クラス分割・URL ルーティング・画面（JSP）までひも付けて説明します。
 
 ## プロジェクト概要
 
--   **技術スタック**: Java 24, Jakarta Servlet 6.1.0, JSP/JSTL, PostgreSQL
--   **アーキテクチャ**: レイヤードアーキテクチャ
--   **業務領域**: 秘書業務管理システム（顧客管理、アサイン管理、タスク管理、請求管理）
+-   **技術スタック**: Java 24, Jakarta Servlet 6.x, JSP/JSTL, PostgreSQL
+-   **アーキテクチャ**: レイヤードアーキテクチャ（Controller / Service / DAO / Domain / DTO / Validation / View）
+-   **業務領域**: 顧客管理・秘書管理・アサイン管理・タスク管理・請求/支払サマリー
 
 ## アーキテクチャ概観
 
-本プロジェクトは**レイヤードアーキテクチャ**を採用し、7 つの主要なレイヤーで関心を分離しています：
-
 ```
 ┌─────────────────────────────────────┐
-│        Presentation Layer           │ ← JSP/JSPF
+│        Presentation Layer           │ ← JSP/JSPF（/WEB-INF/jsp/...）
 │             (View)                  │
 ├─────────────────────────────────────┤
-│         Controller Layer            │ ← FrontController
+│         Controller Layer            │ ← FrontController（単一入口）
 ├─────────────────────────────────────┤
-│         Service Layer               │ ← ビジネスロジック
+│         Service Layer               │ ← 業務ロジック/トランザクション
 ├─────────────────────────────────────┤
-│        Validation Layer             │ ← 入力検証
+│        Validation Layer             │ ← 入力検証/エラー蓄積
 ├─────────────────────────────────────┤
-│           DTO Layer                 │ ← データ転送
+│           DTO Layer                 │ ← DB行/転送用構造
 ├─────────────────────────────────────┤
-│          Domain Layer               │ ← ビジネスエンティティ
+│          Domain Layer               │ ← 画面/業務向けエンティティ
 ├─────────────────────────────────────┤
-│           DAO Layer                 │ ← データアクセス
+│           DAO Layer                 │ ← SQL実行/ResultSet→DTO
 └─────────────────────────────────────┘
 ```
 
-## 各レイヤーの詳細分析
+## ディレクトリと責務の分割
 
-### 1. Controller Layer（制御層）
+-   `src/main/java/controller`
 
-**主要クラス**: `FrontController.java`
+    -   `FrontController.java`: 単一エントリポイント（@WebServlet）。ロール別で `adminExecute` / `secretaryExecute` / `customerExecute` にディスパッチ。共通セッションチェックと forward/redirect 制御。
 
-**責任**:
+-   `src/main/java/service`
 
--   HTTP リクエストの受信と URL パターンマッピング
--   ユーザー認証・認可の確認
--   適切なサービスクラスへのディスパッチ
--   レスポンス（JSP forward/redirect）の制御
+    -   業務単位のサービスに分割：`CommonService` / `CustomerService` / `SecretaryService` / `AssignmentService` / `TaskService` / `InvoiceService` / `SalesCostSummaryService` / `SystemAdminService` / `ProfileService` など。
+    -   `BaseService`: `HttpServletRequest` と `Validation` を保持。`REDIRECT_ERROR` をロール別エラーページに合わせて設定。
+    -   トランザクションは各メソッド内で `try (TransactionManager tm = new TransactionManager()) { ... tm.commit(); }` のパターンで境界を張る。
 
-**設計の特徴**:
+-   `src/main/java/dao`
 
--   **フロントコントローラーパターン**を採用
--   ロール別処理メソッド（`adminExecute()`, `secretaryExecute()`, `customerExecute()`）
--   URL パターンによる機能分岐
--   セッション管理とセキュリティチェックの一元化
+    -   エンティティ/用途ごとに DAO を分割：`CustomerDAO` / `SecretaryDAO` / `AssignmentDAO` / `TaskDAO` / `InvoiceDAO` / `CustomerMonthlyInvoiceDAO` / `TaskRankDAO` / `ProfileDAO` など。
+    -   `BaseDAO`: DAO 共通で `Connection` を保持。
+    -   `TransactionManager`: AutoCloseable・明示 `commit()`/`rollback()`・close 時に確定/破棄。
+    -   `SqlLoader`: クラスパス上の `.sql` 読込ユーティリティ（キャッシュ付）。
 
-```java
-@WebServlet(urlPatterns={"/admin/*", "/secretary/*", "/customer/*"})
-public class FrontController extends HttpServlet {
-    // 単一エントリポイントですべてのリクエストを処理
-}
-```
+-   `src/main/java/domain`
 
-**評価**:
-✅ **良い点**: 単一責任の原則に従い、リクエスト制御のみに集中
-✅ **良い点**: セキュリティ処理の一元化
-⚠️ **課題**: メソッドが大きく、保守性に課題がある可能性
+    -   画面/サービスが扱うビジネスオブジェクト（`Customer` / `Secretary` / `Assignment` / `Task` / ほか集計系）。
 
-### 2. Service Layer（サービス層）
+-   `src/main/java/dto`
 
-**主要クラス**: `*Service.java`（`CustomerService`, `SecretaryService`, `AssignmentService`等）
+    -   DB 行/結合結果を運ぶ転送用構造体（JDBC 型含む）。
+    -   `service.Converter` が DTO→Domain（および必要に応じ Domain→DTO）を担当。
 
-**責任**:
+-   `src/main/java/validation`
 
--   ビジネスロジックの実装
--   トランザクション境界の管理
--   複数の DAO を協調させた処理
--   DTO と Domain オブジェクト間の変換制御
+    -   `Validation`: 必須/形式（UUID, yearMonth, email, phone, postal）/金額検証、エラーメッセージの蓄積。
 
-**設計の特徴**:
+-   `src/main/webapp/WEB-INF/jsp`
+    -   ロール・機能ごとにディレクトリ分割：
+        -   `common/{admin,secretary,customer}`（ログイン/ホーム/エラー）
+        -   `customer/admin`, `secretary/admin`, `systemadmin/admin`, `assignment/admin`, `task/{admin,secretary,customer}` など
+        -   `invoice/{admin,secretary,customer}`（サマリー・Excel テンプレは `WEB-INF/templates/invoice.xlsx`）
+    -   共通部品 `_parts/{admin,secretary,customer}/navbar.jspf` など。
 
--   **Template Method パターン**（`BaseService`による共通処理）
--   try-with-resources によるトランザクション管理
--   `Converter`クラスによる変換処理の分離
--   画面遷移名とパラメータ名の定数化
+## ルーティング → サービス → JSP の対応（抜粋）
 
-```java
-public class CustomerService extends BaseService {
-    // 顧客管理のビジネスロジックを担当
-    public String customerRegisterDone() {
-        try (TransactionManager tm = new TransactionManager()) {
-            // ビジネスルール適用
-            // トランザクション管理
-            // 複数DAOとの協調
-        }
-    }
-}
-```
+-   入口: `/admin/*`, `/secretary/*`, `/customer/*` を `FrontController` が受ける。ルート（末尾なし）は `web.xml` の exact mapping で同一サーブレットに到達。
+-   ロール別 `switch(pathInfo)` でサービス呼出し、戻り値の文字列で JSP を forward（`/WEB-INF/jsp/${nextPath}.jsp`）。先頭 `/` の場合は redirect。
 
-**評価**:
-✅ **良い点**: 責任が明確で、ビジネスロジックが適切に分離
-✅ **良い点**: トランザクション境界の管理が適切
-✅ **良い点**: 定数による可読性の向上
+-   管理者（/admin）
 
-### 3. DAO Layer（データアクセス層）
+    -   顧客一覧: `CustomerService#customerList()` → `customer/admin/home`
+    -   顧客詳細: `CustomerService#customerDetail()` → `customer/admin/detail`
+    -   顧客登録/編集/削除: `CustomerService#customerRegister*() / #customerEdit*() / #customerDelete()`
+    -   秘書一覧/登録/編集/削除: `SecretaryService` → `secretary/admin/*`
+    -   アサイン一覧/登録/PM 登録/引継/継続単価編集/削除: `AssignmentService` → `assignment/admin/*`
+    -   タスク一覧（全件/承認済/未承認/差戻）・一括承認/取消/差戻/アラート: `TaskService` → `task/admin/*`
+    -   サマリー（売上/支払）: `InvoiceService#adminInvoiceSummary()` → `invoice/admin/sales`, `InvoiceService#secretaryInvoiceSummary()` → `invoice/admin/costs`
 
-**主要クラス**: `*DAO.java`（`CustomerDAO`, `SecretaryDAO`等）
+-   秘書（/secretary）
 
-**責任**:
+    -   タスク登録/編集/削除/一覧: `TaskService` → `task/secretary/*`
+    -   マイページ閲覧/編集: `SecretaryService#myPage*()` → `mypage/secretary/*`
+    -   自身の請求サマリー表示/Excel 発行: `InvoiceService#invoiceSummery()` → `invoice/secretary/summary`, `#issueInvoiceExcel(res)` はダウンロード応答で forward しない
 
--   データベースアクセスの実装
--   SQL 文の管理
--   ResultSet から DTO への変換
--   データベース例外の処理
+-   顧客（/customer）
+    -   顧客担当者の登録/編集/削除: `ContactService` → `contact/admin/*`（顧客側入口は `FrontController#customerExecute`）
+    -   請求サマリー: `InvoiceService#customerInvoiceSummary()` → `invoice/customer/summary`
+    -   委託先一覧/秘書プロフィール: `AssignmentService#outsourceList()`, `#secretaryProfile()` → `assignment/customer/*`
+    -   タスク一覧/確認申請（アラート）: `TaskService#customerTaskList()`, `#customerTaskAlert()` → `task/customer/*`
 
-**設計の特徴**:
+## サービス層の典型パターン
 
--   **Data Access Object パターン**
--   継承による共通処理（`BaseDAO`）
--   SQL 定数の明確な管理
--   ResultSet 変換メソッドの分離
+-   入力検証: `Validation` で `isUuid`/`isYearMonth`/`isEmail`/`mustBeMoneyOrZero` 等を実施し、エラーは `errorMsg` に蓄積して JSP に渡す。
+-   トランザクション: `try (TransactionManager tm = new TransactionManager()) { DAO呼出し; tm.commit(); }`。例外時は `RuntimeException` を握ってエラー遷移。
+-   画面遷移: ビュー名や属性キーは定数化（例: `VIEW_*`, `A_*`, `P_*`）。`BaseService.REDIRECT_ERROR` はロール別の `/common/*/error` を指す。
+-   変換: DAO が返す DTO を `Converter` で Domain に詰替えて JSP に渡す（合計/分数計算やグルーピングもサービスで実施）。
 
-```java
-public class CustomerDAO extends BaseDAO {
-    // SQL定数の管理
-    private static final String SQL_SELECT_BASIC = "SELECT ...";
+## DAO 層の典型パターン
 
-    // 変換ロジックの分離
-    private CustomerDTO resultSetToCustomerDTO(ResultSet rs) { ... }
-}
-```
+-   `BaseDAO` で `Connection` を受け取り保持。各 DAO は SQL 実行と ResultSet→DTO 変換に専念。
+-   代表的なメソッド例：
+    -   `SecretaryDAO.selectAll()/selectAllPM()/mailCheckExceptId(...)`
+    -   `AssignmentDAO.selectAllByMonthFiltered(...)/existsDuplicate(...)/updateIncentivesByPairAndMonth(...)`
+    -   `TaskDAO.selectByMonth(...)/approve(...)/unapprove(...)/remand(...)/alertDelete(...)`
+    -   `InvoiceDAO.selectAdminLines(...)/selectTasksByMonthAndCustomer(...)/upsertSecretaryMonthlySummary(...)`
 
-**評価**:
-✅ **良い点**: データアクセス処理が明確に分離
-✅ **良い点**: SQL 管理と ResultSet 変換の適切な分離
-✅ **良い点**: 例外処理の一貫性
+## JSP（Presentation）構成
 
-### 4. Domain Layer（ドメイン層）
+-   共通: `_parts/{role}/navbar.jspf` を `include`。
+-   ロール × 機能でディレクトリ分割し、サービスの戻り値（例: `task/admin/list_unapproved`）がそのまま JSP 相対パスとなる設計。
 
-**主要クラス**: `*。java`（`Customer`, `Secretary`, `Assignment`等）
+## 代表的フロー（具体例）
 
-**責任**:
+-   管理者がアサイン登録（通常）
 
--   ビジネスドメインエンティティの表現
--   ドメイン知識の保持
--   ビジネスルールの実装（一部）
+    1. `/admin/assignment/register?id=...&companyName=...` → `AssignmentService#assignmentRegister()`
+    2. `ProfileDAO` で候補抽出 → `assignment/admin/register` 表示
+    3. POST → `assignmentRegisterCheck()` → 表示用名称の解決
+    4. POST → `assignmentRegisterDone()` → 重複検査 → `dao.insert()` → `tm.commit()` → `assignment/admin/register_done`
 
-**設計の特徴**:
+-   秘書がタスク登録
 
--   **Plain Old Java Object（POJO）**パターン
--   リッチドメインモデルとアネミックドメインモデルの混在
--   エンティティ間の関係性の表現
+    1. `/secretary/task/register` → 当月の自分 × 全顧客アサインを付与
+    2. POST `taskRegisterDone()` → 分計算, YM 整合チェック → `TaskDAO.insert()` → `tm.commit()` → 未承認一覧へ PRG
 
-```java
-public class Customer implements Serializable {
-    // ビジネスエンティティとしての顧客を表現
-    private List<Assignment> assignments = new ArrayList<>();
-    private List<CustomerContact> customerContacts = new ArrayList<>();
-}
-```
-
-**評価**:
-✅ **良い点**: ドメイン知識が適切にカプセル化
-⚠️ **課題**: 一部アネミックモデル（ゲッター/セッターのみ）となっている
-
-### 5. DTO Layer（データ転送層）
-
-**主要クラス**: `*DTO.java`（`CustomerDTO`, `SecretaryDTO`等）
-
-**責任**:
-
--   レイヤー間でのデータ転送
--   データベース型とドメイン型の橋渡し
--   外部システムとのデータ交換
-
-**設計の特徴**:
-
--   **Data Transfer Object パターン**
--   データベース型（Timestamp）とドメイン型（Date）の使い分け
--   レイヤー境界での型安全性の確保
-
-```java
-public class CustomerDTO implements Serializable {
-    // データ転送に最適化された構造
-    private Timestamp createdAt;    // DB層
-    private Timestamp updatedAt;
-    private List<CustomerContactDTO> customerContacts;
-}
-```
-
-**評価**:
-✅ **良い点**: レイヤー間の疎結合を実現
-✅ **良い点**: 適切な型変換による安全性の確保
-
-### 6. Validation Layer（検証層）
-
-**主要クラス**: `Validation.java`
-
-**責任**:
-
--   入力値の妥当性検証
--   ビジネスルール違反の検出
--   エラーメッセージの管理
-
-**設計の特徴**:
-
--   検証ロジックの一元化
--   エラーメッセージの蓄積機能
--   再利用可能な検証メソッド
-
-```java
-public class Validation {
-    // 検証ロジックの集約
-    public boolean isEmail(String text) { ... }
-    public void mustBeMoneyOrZero(String label, String value) { ... }
-}
-```
-
-**評価**:
-✅ **良い点**: 検証ロジックが一箇所に集約
-✅ **良い点**: 再利用性が高い設計
-
-### 7. Presentation Layer（表現層）
-
-**主要技術**: JSP/JSTL, Bootstrap
-
-**責任**:
-
--   ユーザーインターフェースの表示
--   ユーザー入力の受付
--   レスポンシブデザインの提供
-
-**設計の特徴**:
-
--   **Model-View-Controller パターン**
--   共通部品の分離（`_parts/*.jspf`）
--   ロール別画面構成
-
-```jsp
-<%-- ナビゲーションバーの共通化 --%>
-<%@ include file="/WEB-INF/jsp/_parts/admin/navbar.jspf" %>
-```
-
-**評価**:
-✅ **良い点**: 画面部品の再利用性
-✅ **良い点**: ロール別の UI 分離
-
-## 処理の流れ分析
-
-### 典型的な処理フロー
-
-1. **リクエスト受信** (FrontController)
-
-    - URL パターンマッチング
-    - 認証・認可チェック
-    - 適切なサービスメソッド呼び出し
-
-2. **ビジネス処理** (Service)
-
-    - 入力値検証 (Validation)
-    - トランザクション開始 (TransactionManager)
-    - DAO 呼び出しによるデータ操作
-
-3. **データアクセス** (DAO)
-
-    - SQL 実行
-    - ResultSet → DTO 変換
-
-4. **ドメイン変換** (Converter)
-
-    - DTO → Domain 変換
-    - Service に戻ってビジネスロジック適用
-
-5. **画面表示** (JSP)
-    - モデル属性の表示
-    - ユーザーインターフェース描画
-
-### 依存関係
-
-```
-Controller → Service → DAO → Database
-     ↓         ↓
-   JSP ←   Domain ← DTO ← ResultSet
-```
+-   顧客が請求サマリー閲覧
+    1. `/customer/invoice` → `InvoiceService#customerInvoiceSummary()`
+    2. `InvoiceDAO` で明細+集計取得 → 合計算出 → `invoice/customer/summary`
 
 ## 優れている点
 
-### 1. **レイヤー分離の徹底**
+-   **単一入口のルーティング**: `FrontController` に集約、`web.xml` の exact mapping と注釈の併用でルート/ワイルドカードをカバー。
+-   **明確な分割**: Service は業務単位・DAO はテーブル/機能単位に分離。DTO/Domain/Converter で型・責務を整理。
+-   **一貫した Tx/Validation**: 例外時のエラー遷移、ビュー/属性キーの定数化で可読性・保守性が高い。
 
--   各レイヤーの責任が明確に分離されている
--   依存関係が一方向で健全
+## 改善ポイント（実装に基づく具体化）
 
-### 2. **トランザクション管理**
-
--   try-with-resources による適切なリソース管理
--   `TransactionManager`による一元化された管理
-
-### 3. **セキュリティ**
-
--   フロントコントローラーでの一元的な認証・認可
--   SQL インジェクション対策（PreparedStatement 使用）
-
-### 4. **保守性**
-
--   定数による設定の一元化
--   コメントによる適切なドキュメンテーション
-
-### 5. **型安全性**
-
--   DTO と Domain クラスによる型安全なデータ伝搬
--   Converter クラスによる変換処理の分離
-
-## 改善点・課題
-
-### 1. **コードの重複**
-
-⚠️ **課題**: 各 Service クラスで似たような処理パターンが重複
-💡 **改善案**: テンプレートメソッドパターンのさらなる活用
-
-### 2. **巨大な Controller メソッド**
-
-⚠️ **課題**: `FrontController`の各実行メソッドが大きく、多くの責任を持つ
-💡 **改善案**: サブコントローラーの導入またはコマンドパターンの適用
-
-### 3. **アネミックドメインモデル**
-
-⚠️ **課題**: Domain クラスがデータ保持のみでビジネスロジックを持たない
-💡 **改善案**: リッチドメインモデルへの移行
-
-### 4. **エラーハンドリング**
-
-⚠️ **課題**: 例外処理が一部で catch-all になっている
-💡 **改善案**: より詳細な例外型の定義と適切なハンドリング
-
-### 5. **テスタビリティ**
-
-⚠️ **課題**: 依存性注入が不十分で単体テストが困難
-💡 **改善案**: DI コンテナの導入またはコンストラクタインジェクション
-
-## 設計パターンの活用
-
-このプロジェクトでは以下の設計パターンが効果的に活用されています：
-
-1. **Front Controller**: リクエスト処理の一元化
-2. **Data Access Object**: データアクセス処理の分離
-3. **Data Transfer Object**: レイヤー間データ転送
-4. **Template Method**: 共通処理の基底クラス化
-5. **Model-View-Controller**: プレゼンテーション層の構造化
-
-## 結論
-
-本プロジェクトは、Java Web 開発における関心の分離の良い実装例を示しています。レイヤードアーキテクチャが適切に適用され、各レイヤーの責任が明確に分離されています。
-
-特に以下の点で優秀です：
-
--   **明確な責任分離**: 各レイヤーが適切な責任を持つ
--   **保守性**: コードが理解しやすく修正しやすい構造
--   **セキュリティ**: 一元化された認証・認可処理
-
-一方で、以下の改善により、さらに優れたアーキテクチャになることが期待されます：
-
--   **リッチドメインモデル**への移行
--   **依存性注入**の導入によるテスタビリティの向上
--   **より細かい例外処理**による堅牢性の向上
-
-このアーキテクチャは中規模の Web アプリケーションには非常に適しており、関心の分離の良い実践例として評価できます。
+-   **Controller の肥大化**: `FrontController` の `switch` が長大。コマンド/アクションのテーブル化やサブコントローラ導入で縮減可能。
+-   **Service での画面別定数の重複**: ビュー名・属性キーが各クラスに散在。共通のナビゲーション/キー定義クラスで集中管理可。
+-   **例外型の粒度**: `RuntimeException` 握りが多い。DAO/Service で粒度の揃った例外を定義し、ハンドリング方針を明示。
+-   **DI/テスト**: `new TransactionManager()`/`new XXXDAO(conn)` 直書き依存。コンストラクタインジェクション導入で単体テストしやすく。
 
 ---
 
-_分析日: 2025 年 09 月 25 日_
-_分析対象: Hidariude Java Web Application_
+最終更新: 2025-10-22（実装走査に基づく更新）
+分析対象: Hidariude Java Web Application
