Claude Codeで機能定義書を作成(part1)

--- a/docs/機能定義/管理者/00_機能一覧.md
+++ b/docs/機能定義/管理者/00_機能一覧.md
@@ -2,7 +2,7 @@
 | --- | -------------- | -------------- | ------- | -------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------- |
 | 1   | 共通業務       | 認証           | A01_91  | ログイン                   | ログインを行う                                                                                                                                                                                      |                                                                         |
 | 2   | 共通業務       | 認証           | A01_92  | ログアウト                 | ログアウトを行う                                                                                                                                                                                    |                                                                         |
-| 3   | 共通業務       | 認証           | A01_93  | パスワードの再設定         | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                                                    |                                                                         |
+| 3   | 共通業務       | 認証           | A01_93  | パスワードの再設定         | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                                                    | 今後実装予定                                                            |
 | 4   | マイページ     | マイページ     | A02_01  | マイページ表示             | 自身の情報である氏名やメールアドレスを確認できる画面を表示する。                                                                                                                                    |                                                                         |
 | 5   | マイページ     | マイページ     | A02_02  | マイページ編集             | 自身のメールアドレス、パスワード、氏名の変更を行う。                                                                                                                                                |                                                                         |
 | 6   | アカウント管理 | 全権ユーザ管理 | A04_01  | システム管理者一覧表示     | システム管理者(全権ユーザ)の一覧表示を行う。                                                                                                                                                        |                                                                         |
@@ -10,7 +10,7 @@
 | 8   | アカウント管理 | 全権ユーザ管理 | A04_03  | システム管理者編集         | システム管理者(全権ユーザ)の編集を行う。                                                                                                                                                            |                                                                         |
 | 9   | アカウント管理 | 全権ユーザ管理 | A04_04  | システム管理者削除         | システム管理者(全権ユーザ)の削除を行う。                                                                                                                                                            |                                                                         |
 | 10  | アカウント管理 | 秘書管理       | A04_05  | 秘書一覧表示               | 秘書の一覧表示を行う。                                                                                                                                                                              | ソートとフィルタリングが無い<br>PM 対応(可・不可)の項目が追加されている |
-| 11  | アカウント管理 | 秘書管理       | A04_06  | 秘書新規登録               | 秘書の登録を行う。                                                                                                                                                                                  | 備考は？口座情報は？緊急連絡先は？                                      |
+| 11  | アカウント管理 | 秘書管理       | A04_06  | 秘書新規登録               | 秘書の登録を行う。                                                                                                                                                                                  | 備考欄、口座情報、緊急連絡先を含む                                      |
 | 12  | アカウント管理 | 秘書管理       | A04_07  | 秘書詳細表示               | 秘書の詳細表示を行う。                                                                                                                                                                              |                                                                         |
 | 13  | アカウント管理 | 秘書管理       | A04_08  | 秘書詳細編集               | 秘書の編集を行う。                                                                                                                                                                                  |                                                                         |
 | 14  | アカウント管理 | 秘書管理       | A04_09  | 秘書削除                   | 秘書の削除を行う。                                                                                                                                                                                  |                                                                         |
