ドキュメント整理

--- a/docs/機能定義/管理者/03_パスワードリセット.md
+++ b/docs/機能定義/管理者/03_パスワードリセット.md
@@ -1,29 +1,34 @@
-# 03_パスワードリセット（A01_93）
+# 03\_パスワードリセット（A01_93）
 
 ## 機能概要
 
-ログインパスワードを忘れたシステム管理者が、登録済みのメールアドレスを使用してパスワードを再設定する機能です。メールアドレスを入力するとパスワードリセット用のトークン付きURLがメールで送信され、そのURLからパスワードを再設定できます。
+ログインパスワードを忘れたシステム管理者が、登録済みのメールアドレスを使用してパスワードを再設定する機能です。メールアドレスを入力するとパスワードリセット用のトークン付き URL がメールで送信され、その URL からパスワードを再設定できます。
+
+**全ロール（管理者・秘書・顧客）に対応しています。**
 
 ## 実装状況
 
-**未実装（今後実装予定）**
+**✅ 実装完了**
 
-以下は想定仕様です。実装時に変更される可能性があります。
+## URL 一覧
 
-## URL一覧（想定）
+| HTTP メソッド | URL                                        | 画面/処理名                | 説明                                           |
+| ------------- | ------------------------------------------ | -------------------------- | ---------------------------------------------- |
+| GET           | `/admin/password_reset`                    | パスワードリセット申請画面 | メールアドレス入力フォームを表示               |
+| POST          | `/admin/password_reset/request`            | リセット申請処理           | トークン生成、メール送信                       |
+| GET           | `/admin/password_reset/form?token={token}` | パスワード再設定画面       | トークン検証後、新パスワード入力フォームを表示 |
+| POST          | `/admin/password_reset/reset`              | パスワード再設定処理       | 新パスワードを設定                             |
 
-| HTTPメソッド | URL | 画面/処理名 | 説明 |
-|---|---|---|---|
-| GET | `/admin/password_reset` | パスワードリセット申請画面 | メールアドレス入力フォームを表示 |
-| POST | `/admin/password_reset/request` | リセット申請処理 | トークン生成、メール送信 |
-| GET | `/admin/password_reset/form?token={token}` | パスワード再設定画面 | トークン検証後、新パスワード入力フォームを表示 |
-| POST | `/admin/password_reset/reset` | パスワード再設定処理 | 新パスワードを設定 |
+**秘書・顧客向け URL**（同じパス）
 
-## 画面フロー（想定）
+-   `/secretary/password_reset` など
+-   `/customer/password_reset` など
+
+## 画面フロー
 
 ```
 [ログイン画面] (/admin)
-    ↓ 「パスワードを忘れた方」リンククリック
+    ↓ 「パスワードをお忘れの方はこちら」リンククリック
     ↓
 [パスワードリセット申請画面] (/admin/password_reset)
     ↓ メールアドレス入力
@@ -40,75 +45,103 @@
     ↓
 [再設定完了画面]
     ↓
-[ログイン画面] (/admin) へリダイレクト
+[ログイン画面] (/admin) へのリンク
 ```
 
-## バックエンド処理詳細（想定）
+## バックエンド処理詳細
 
-### サービスクラス（想定）
+### サービスクラス
 
-- **クラス**: `PasswordResetService.java`（新規作成）
-- **メソッド**:
-  - `showResetRequestForm()`: リセット申請画面表示
-  - `processResetRequest()`: トークン生成・メール送信
-  - `showResetForm()`: 再設定画面表示（トークン検証）
-  - `processPasswordReset()`: パスワード更新
+-   **クラス**: `PasswordResetService.java`
+-   **メソッド**:
+    -   `showResetRequestForm(String userType)`: リセット申請画面表示
+    -   `processResetRequest(String userType)`: トークン生成・メール送信
+    -   `showResetForm(String userType)`: 再設定画面表示（トークン検証）
+    -   `processPasswordReset(String userType)`: パスワード更新
 
-### 処理フロー（想定）
+### 処理フロー
 
 #### 1. リセット申請処理
 
 1. **入力パラメータ取得**
-   - `email`: メールアドレス（必須）
+
+    - `email`: メールアドレス（必須）
 
 2. **バリデーション**
-   - 必須チェック
-   - メールアドレス形式チェック
 
-3. **管理者存在確認**
-   - `SystemAdminDAO.selectByMail(email)` でメールアドレスの存在確認
-   - 存在しない場合でも同じメッセージを返す（セキュリティ対策：アカウントの存在を推測させない）
+    - 必須チェック
+    - メールアドレス形式チェック
+    - `ValidationUtil.validatePasswordResetRequest(email)` を使用
 
-4. **トークン生成・保存**
-   - ランダムなトークン（UUID等）を生成
-   - トークンの有効期限を設定（例：1時間）
-   - `password_reset_tokens` テーブルに保存（新規テーブル）
+3. **クリーンアップ**
 
-5. **メール送信**
-   - パスワードリセット用URLを含むメールを送信
-   - URL例: `https://example.com/admin/password_reset/form?token=xxx`
+    - 期限切れトークンを自動削除
 
-6. **完了画面表示**
-   - 「メールを送信しました」メッセージを表示
+4. **管理者存在確認**
+
+    - `SystemAdminDAO.selectByMail(email)` / `SecretaryDAO.selectByMail(email)` / `CustomerContactDAO.selectByMail(email)` でメールアドレスの存在確認
+    - 存在しない場合でも同じメッセージを返す（セキュリティ対策：アカウントの存在を推測させない）
+
+5. **二重送信防止チェック**
+
+    - `PasswordResetTokenDAO.selectValidByUser(userType, userId)` で既存の有効なトークンを検索
+    - 有効なトークンが存在する場合は**メール送信をスキップ**
+    - 同一ユーザーにつき 1 件のみメール送信
+
+6. **トークン生成・保存**
+
+    - ランダムなトークン（UUID）を生成
+    - トークンの有効期限を設定（**24 時間**）
+    - `password_reset_tokens` テーブルに保存
+
+7. **メール送信**
+
+    - SendGrid API を使用してメール送信
+    - パスワードリセット用 URL を含むメールを送信
+    - URL 例: `http://localhost:8080/hidariude/admin/password_reset/form?token=xxx`
+    - ロール別にメール件名・内容が異なる
+
+8. **完了画面表示**
+    - 「メールを送信しました」メッセージを表示
 
 #### 2. パスワード再設定処理
 
 1. **入力パラメータ取得**
-   - `token`: リセットトークン（必須）
-   - `newPassword`: 新パスワード（必須）
-   - `confirmPassword`: 確認用パスワード（必須）
+
+    - `token`: リセットトークン（必須）
+    - `newPassword`: 新パスワード（必須）
+    - `confirmPassword`: 確認用パスワード（必須）
 
 2. **バリデーション**
-   - 必須チェック
-   - パスワード強度チェック（8文字以上、英大小数字含む）
-   - パスワード一致チェック（`newPassword` == `confirmPassword`）
+
+    - 必須チェック
+    - パスワード強度チェック（8 文字以上、英大小数字含む）
+    - パスワード一致チェック（`newPassword` == `confirmPassword`）
+    - `ValidationUtil.validatePasswordReset(token, newPassword, confirmPassword)` を使用
 
 3. **トークン検証**
-   - `PasswordResetTokenDAO.selectByToken(token)` でトークン情報取得
-   - トークンが存在しない場合はエラー
-   - 有効期限切れの場合はエラー
-   - 既に使用済みの場合はエラー
+
+    - `PasswordResetTokenDAO.selectByToken(token)` でトークン情報取得
+    - トークンが存在しない場合はエラー
+    - 有効期限切れの場合はエラー
+    - 既に使用済みの場合はエラー
+    - ユーザータイプが一致しない場合はエラー
 
 4. **パスワード更新**
-   - `PasswordUtil.hashPassword(newPassword)` で新パスワードをハッシュ化
-   - `SystemAdminDAO.updatePassword(adminId, hashedPassword)` でパスワード更新
-   - トークンを使用済みにマーク
+
+    - `PasswordUtil.hashPassword(newPassword)` で新パスワードをハッシュ化
+    - ロール別の DAO でパスワード更新
+        - 管理者: `SystemAdminDAO.updatePassword(userId, hashedPassword)`
+        - 秘書: `SecretaryDAO.updatePassword(userId, hashedPassword)`
+        - 顧客: `CustomerContactDAO.updatePassword(userId, hashedPassword)`
+    - トークンを使用済みにマーク
+    - **そのユーザーの過去のトークンをすべて削除**
 
 5. **完了画面表示**
-   - 「パスワードを再設定しました」メッセージを表示
-   - ログイン画面へのリンクを表示
+    - 「パスワードを再設定しました」メッセージを表示
+    - ログイン画面へのリンクを表示
 
-### トランザクション管理（想定）
+### トランザクション管理
 
 ```java
 try (TransactionManager tm = new TransactionManager()) {
@@ -119,76 +152,126 @@ try (TransactionManager tm = new TransactionManager()) {
 }
 ```
 
-### DAO呼び出し（想定）
+### DAO 呼び出し
 
-#### 新規DAO: PasswordResetTokenDAO
+#### PasswordResetTokenDAO
 
-- `insert(PasswordResetTokenDTO token)`: トークン保存
-- `selectByToken(String token)`: トークン取得
-- `markAsUsed(String token)`: トークンを使用済みにマーク
-- `deleteExpired()`: 期限切れトークンの削除（定期実行）
+-   `insert(PasswordResetTokenDTO dto)`: トークン保存
+-   `selectByToken(String token)`: トークン取得
+-   `selectValidByUser(String userType, UUID userId)`: ユーザーの有効なトークンを取得（二重送信防止用）
+-   `markAsUsed(String token)`: トークンを使用済みにマーク
+-   `deleteExpiredTokens()`: 期限切れトークンの削除（申請時に自動実行）
+-   `deleteByUser(String userType, UUID userId)`: 指定ユーザーの全トークンを削除（再設定完了時に自動実行）
 
-#### SystemAdminDAO（追加メソッド）
+#### ユーザー DAO（追加メソッド）
 
-- `updatePassword(UUID id, String hashedPassword)`: パスワード更新のみ実行
+-   `SystemAdminDAO.updatePassword(UUID id, String hashedPassword)`: パスワード更新のみ実行
+-   `SecretaryDAO.updatePassword(UUID id, String hashedPassword)`: パスワード更新のみ実行
+-   `CustomerContactDAO.updatePassword(UUID id, String hashedPassword)`: パスワード更新のみ実行
 
-### 新規テーブル: password_reset_tokens（想定）
+### 新規テーブル: password_reset_tokens
 
 ```sql
 CREATE TABLE password_reset_tokens (
     id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
-    admin_id UUID NOT NULL REFERENCES system_admins(id),
+    user_type VARCHAR(20) NOT NULL CHECK (user_type IN ('admin', 'secretary', 'customer')),
+    user_id UUID NOT NULL,
     token VARCHAR(255) UNIQUE NOT NULL,
     expires_at TIMESTAMP NOT NULL,
     used_at TIMESTAMP,
     created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
 );
+
+-- インデックス
+CREATE INDEX idx_password_reset_tokens_token ON password_reset_tokens(token);
+CREATE INDEX idx_password_reset_tokens_user ON password_reset_tokens(user_type, user_id);
 ```
 
-## ビューファイル（想定）
+## ビューファイル
 
-- **リセット申請画面**: `/WEB-INF/jsp/common/admin/password_reset_request.jsp`
-- **申請完了画面**: `/WEB-INF/jsp/common/admin/password_reset_sent.jsp`
-- **再設定画面**: `/WEB-INF/jsp/common/admin/password_reset_form.jsp`
-- **再設定完了画面**: `/WEB-INF/jsp/common/admin/password_reset_done.jsp`
+-   **リセット申請画面**: `/WEB-INF/jsp/common/admin/password_reset_request.jsp`
+-   **申請完了画面**: `/WEB-INF/jsp/common/admin/password_reset_sent.jsp`
+-   **再設定画面**: `/WEB-INF/jsp/common/admin/password_reset_form.jsp`
+-   **再設定完了画面**: `/WEB-INF/jsp/common/admin/password_reset_done.jsp`
 
-## データモデル（想定）
+**秘書・顧客向け**: `secretary` / `customer` ディレクトリに同様のファイルが配置されています。
 
-### 新規DTO: PasswordResetTokenDTO
+## データモデル
 
-- `id` (UUID): トークンID
-- `adminId` (UUID): 管理者ID
-- `token` (String): リセットトークン
-- `expiresAt` (Timestamp): 有効期限
-- `usedAt` (Timestamp): 使用日時（NULL = 未使用）
-- `createdAt` (Timestamp): 作成日時
+### PasswordResetTokenDTO
 
-## エラーハンドリング（想定）
+-   `id` (UUID): トークン ID
+-   `userType` (String): ユーザータイプ（'admin', 'secretary', 'customer'）
+-   `userId` (UUID): ユーザー ID
+-   `token` (String): リセットトークン
+-   `expiresAt` (Timestamp): 有効期限
+-   `usedAt` (Timestamp): 使用日時（NULL = 未使用）
+-   `createdAt` (Timestamp): 作成日時
+
+### ヘルパーメソッド
+
+-   `isUsed()`: トークンが使用済みかどうかを判定
+-   `isExpired()`: トークンが有効期限切れかどうかを判定
+-   `isUnused()`: トークンが未使用かどうかを判定
+-   `isValid()`: トークンが有効かどうかを判定
+
+## エラーハンドリング
 
 ### バリデーションエラー
 
-- メールアドレス未入力・形式エラー
-- パスワード未入力・強度不足・不一致エラー
+-   メールアドレス未入力・形式エラー
+-   パスワード未入力・強度不足・不一致エラー
 
 ### ビジネスロジックエラー
 
-- トークンが存在しない
-- トークンが期限切れ
-- トークンが既に使用済み
+-   トークンが存在しない
+-   トークンが期限切れ
+-   トークンが既に使用済み
+-   ユーザータイプが一致しない
 
 ### セキュリティ考慮事項
 
-- メールアドレスの存在有無を推測させない（存在しない場合も同じメッセージ）
-- トークンは推測困難なランダム文字列
-- トークンは一度のみ使用可能
-- トークンには有効期限を設定（1時間推奨）
-- パスワードリセット試行回数の制限（DoS対策）
-- メール送信失敗時のリトライ処理
+-   ✅ メールアドレスの存在有無を推測させない（存在しない場合も同じメッセージ）
+-   ✅ トークンは推測困難なランダム文字列（UUID）
+-   ✅ トークンは一度のみ使用可能
+-   ✅ トークンには有効期限を設定（24 時間）
+-   ✅ 同一ユーザーにつき 1 件のみメール送信（二重送信防止）
+-   ✅ フロントエンドでボタンの二重クリック防止（JavaScript）
+-   ✅ パスワードリセット完了時に過去のトークンを削除
+
+## その他の実装詳細
+
+### メール設定
+
+-   **送信元メールアドレス**: info@jibun-note.co.jp（SendGrid 側で承認済み）
+-   **送信元名**: Hidariude
+-   **API**: SendGrid API
+-   **設定管理**: `MailConfig.java` クラス
+
+### 環境設定
+
+-   **開発環境 URL**: http://localhost:8080/hidariude
+-   **本番環境 URL**: http://ik1-224-81260.vs.sakura.ne.jp:8080/hidariude
+-   **環境変数**: `APP_BASE_URL` で設定可能
+
+### トークン設定
+
+-   **有効期限**: 24 時間
+-   **トークン形式**: UUID（ランダム文字列）
+-   **クリーンアップ**: 申請時に期限切れトークンを自動削除
+
+### フロントエンド仕様
+
+-   二重送信防止: 送信ボタンクリック後に無効化
+-   ロール別デザイン: 各ロールごとに異なるテーマカラー
+    -   管理者: 赤系 (#dc3545)
+    -   秘書: 緑系 (#20c997)
+    -   顧客: 青系 (#0d6efd)
 
 ## 備考
 
-- **実装優先度**: 中（セキュリティ機能として重要だが、初期リリースでは管理者が直接パスワード変更可能）
-- **メール送信**: JavaMail API または Jakarta Mail を使用
-- **トークン有効期限**: 1時間を推奨（要件に応じて調整可能）
-- **他ロール対応**: 秘書・顧客向けにも同様の機能を実装予定
-- **定期クリーンアップ**: 期限切れトークンを定期的に削除するバッチ処理が必要
+-   **実装日**: 2025 年 10 月 30 日
+-   **実装バージョン**: v1.0
+-   **対応ロール**: 管理者・秘書・顧客
+-   **依存ライブラリ**: SendGrid Java SDK (sendgrid-java 4.10.3)
+-   **マイグレーション**: `Migration_20251030_CreatePasswordResetTokens`
