機能一覧修正

--- a/docs/機能定義/管理者/00_機能一覧.md
+++ b/docs/機能定義/管理者/00_機能一覧.md
@@ -2,7 +2,7 @@
 | --- | -------------- | -------------- | ------- | -------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------- |
 | 1   | 共通業務       | 認証           | A01_91  | ログイン                   | ログインを行う                                                                                                                                                                                      |                                                                         |
 | 2   | 共通業務       | 認証           | A01_92  | ログアウト                 | ログアウトを行う                                                                                                                                                                                    |                                                                         |
-| 3   | 共通業務       | 認証           | A01_93  | パスワードの再設定         | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                                                    | 今後実装予定                                                            |
+| 3   | 共通業務       | 認証           | A01_93  | パスワードの再設定         | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                                                    |                                                                         |
 | 4   | マイページ     | マイページ     | A02_01  | マイページ表示             | 自身の情報である氏名やメールアドレスを確認できる画面を表示する。                                                                                                                                    |                                                                         |
 | 5   | マイページ     | マイページ     | A02_02  | マイページ編集             | 自身のメールアドレス、パスワード、氏名の変更を行う。                                                                                                                                                |                                                                         |
 | 6   | アカウント管理 | 全権ユーザ管理 | A04_01  | システム管理者一覧表示     | システム管理者(全権ユーザ)の一覧表示を行う。                                                                                                                                                        |                                                                         |
