コンテキストパス無し(/)に修正

--- a/docs/機能定義/管理者/03_パスワードリセット.md
+++ b/docs/機能定義/管理者/03_パスワードリセット.md
@@ -98,7 +98,7 @@
 
     - SendGrid API を使用してメール送信
     - パスワードリセット用 URL を含むメールを送信
-    - URL 例: `http://localhost:8080/hidariude/admin/password_reset/form?token=xxx`
+    - URL 例: `http://localhost:8080/admin/password_reset/form?token=xxx`
     - ロール別にメール件名・内容が異なる
 
 8. **完了画面表示**
@@ -244,14 +244,14 @@ CREATE INDEX idx_password_reset_tokens_user ON password_reset_tokens(user_type, 
 ### メール設定
 
 -   **送信元メールアドレス**: info@jibun-note.co.jp（SendGrid 側で承認済み）
--   **送信元名**: Hidariude
+-   **送信元名**: Our Desk
 -   **API**: SendGrid API
 -   **設定管理**: `MailConfig.java` クラス
 
 ### 環境設定
 
--   **開発環境 URL**: http://localhost:8080/hidariude
--   **本番環境 URL**: http://ik1-224-81260.vs.sakura.ne.jp:8080/hidariude
+-   **開発環境 URL**: http://localhost:8080
+-   **本番環境 URL**: http://ik1-224-81260.vs.sakura.ne.jp:8080
 -   **環境変数**: `APP_BASE_URL` で設定可能
 
 ### トークン設定
