管理者一覧から自身を除外

--- a/docs/機能定義/管理者/06_システム管理者一覧表示.md
+++ b/docs/機能定義/管理者/06_システム管理者一覧表示.md
@@ -1,4 +1,4 @@
-# 06_システム管理者一覧表示（A04_01）
+# 06\_システム管理者一覧表示（A04_01）
 
 ## 機能概要
 
@@ -8,11 +8,11 @@
 
 **実装済み**
 
-## URL一覧
+## URL 一覧
 
-| HTTPメソッド | URL | 画面/処理名 | 説明 |
-|---|---|---|---|
-| GET | `/admin/system_admin` | 管理者一覧表示 | 全システム管理者の一覧を表示 |
+| HTTP メソッド | URL                   | 画面/処理名    | 説明                         |
+| ------------- | --------------------- | -------------- | ---------------------------- |
+| GET           | `/admin/system_admin` | 管理者一覧表示 | 全システム管理者の一覧を表示 |
 
 ## 画面フロー
 
@@ -32,30 +32,36 @@
 
 ### サービスクラス
 
-- **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java:82)
-- **メソッド**: `systemAdminList()`
+-   **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java:82)
+-   **メソッド**: `systemAdminList()`
 
 ### 処理フロー
 
 1. **データベース接続**
-   - `TransactionManager` で接続取得
-   - トランザクション開始（読み取り専用）
+
+    - `TransactionManager` で接続取得
+    - トランザクション開始（読み取り専用）
 
 2. **全管理者取得**
-   - `SystemAdminDAO.selectAll()` で全管理者を取得
-   - 論理削除されていない管理者のみ取得（`deleted_at IS NULL`）
-   - 取得順は作成日時順（デフォルト）
+
+    - セッションから現在ログイン中の管理者 ID を取得
+    - `SystemAdminDAO.selectAllExceptId()` で自分自身を除外して管理者を取得
+    - 論理削除されていない管理者のみ取得（`deleted_at IS NULL`）
+    - 取得順は作成日時順（デフォルト）
+    - **自分自身のアカウントは一覧に表示されない**
 
 3. **リスト変換**
-   - DTOリストを `ArrayList` に変換
-   - JSPで安全に扱えるようにする
+
+    - DTO リストを `ArrayList` に変換
+    - JSP で安全に扱えるようにする
 
 4. **画面表示用データ設定**
-   - `admins` 属性にリストを設定
-   - リクエストスコープに格納
+
+    - `admins` 属性にリストを設定
+    - リクエストスコープに格納
 
 5. **ビューへフォワード**
-   - 一覧ビュー（`systemadmin/admin/home`）へフォワード
+    - 一覧ビュー（`systemadmin/admin/home`）へフォワード
 
 ### トランザクション管理
 
@@ -73,86 +79,90 @@ try (TransactionManager tm = new TransactionManager()) {
 ```
 
 **特徴**:
-- 読み取り専用処理のため、明示的なコミット不要
-- try-with-resources で自動クローズ
 
-### DAO呼び出し
+-   読み取り専用処理のため、明示的なコミット不要
+-   try-with-resources で自動クローズ
 
-- **SystemAdminDAO**
-  - `selectAll()`: 全システム管理者を取得
-    - SQL:
-      ```sql
-      SELECT id, mail, password, name, name_ruby,
-             created_at, updated_at, deleted_at, last_login_at
-      FROM system_admins
-      WHERE deleted_at IS NULL
-      ORDER BY created_at DESC
-      ```
+### DAO 呼び出し
+
+-   **SystemAdminDAO**
+    -   `selectAllExceptId(UUID excludeId)`: 指定 ID を除外してシステム管理者を取得
+        -   SQL:
+            ```sql
+            SELECT id, mail, password, name, name_ruby,
+                   created_at, updated_at, deleted_at, last_login_at
+            FROM system_admins
+            WHERE deleted_at IS NULL AND id <> ?
+            ORDER BY created_at DESC
+            ```
+        -   パラメータ: `excludeId` - 除外する管理者 ID（現在ログイン中の管理者 ID）
 
 ### セキュリティ
 
-- **論理削除フィルタ**: 削除済み管理者は表示されない
-- **セッションチェック**: FrontControllerで管理者権限確認済み
+-   **論理削除フィルタ**: 削除済み管理者は表示されない
+-   **自分自身除外**: 現在ログイン中の管理者は一覧に表示されない
+-   **セッションチェック**: FrontController で管理者権限確認済み
 
 ## ビューファイル
 
-- **一覧画面**: [/WEB-INF/jsp/systemadmin/admin/home.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/home.jsp)
+-   **一覧画面**: [/WEB-INF/jsp/systemadmin/admin/home.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/home.jsp)
 
 ### 画面表示項目
 
 リクエスト属性 `admins` (List<SystemAdminDTO>) から以下の情報を表示：
 
-| 項目 | 説明 |
-|-----|------|
-| **氏名** | 管理者の氏名 |
-| **ふりがな** | 氏名のふりがな |
-| **メールアドレス** | ログインIDとして使用 |
-| **作成日時** | アカウント作成日時 |
+| 項目                 | 説明                   |
+| -------------------- | ---------------------- |
+| **氏名**             | 管理者の氏名           |
+| **ふりがな**         | 氏名のふりがな         |
+| **メールアドレス**   | ログイン ID として使用 |
+| **作成日時**         | アカウント作成日時     |
 | **最終ログイン日時** | 最後にログインした日時 |
-| **アクション** | 編集・削除ボタン |
+| **アクション**       | 編集・削除ボタン       |
 
 ### 画面アクション
 
-- **新規登録ボタン**: システム管理者新規登録画面（`/admin/system_admin/register`）へ遷移
-- **編集ボタン**: システム管理者編集画面（`/admin/system_admin/edit?id={管理者ID}`）へ遷移
-- **削除ボタン**: 削除確認後、削除処理実行（`/admin/system_admin/delete`）
+-   **新規登録ボタン**: システム管理者新規登録画面（`/admin/system_admin/register`）へ遷移
+-   **編集ボタン**: システム管理者編集画面（`/admin/system_admin/edit?id={管理者ID}`）へ遷移
+-   **削除ボタン**: 削除確認後、削除処理実行（`/admin/system_admin/delete`）
 
 ## データモデル
 
-### 使用するDTO
+### 使用する DTO
 
-- **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
-  - `id` (UUID): 管理者ID
-  - `mail` (String): メールアドレス
-  - `password` (String): パスワード（ハッシュ化済み、画面には非表示）
-  - `name` (String): 氏名
-  - `nameRuby` (String): ふりがな
-  - `createdAt` (Timestamp): 作成日時
-  - `updatedAt` (Timestamp): 更新日時
-  - `deletedAt` (Timestamp): 削除日時（NULL = 有効）
-  - `lastLoginAt` (Timestamp): 最終ログイン日時
+-   **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
+    -   `id` (UUID): 管理者 ID
+    -   `mail` (String): メールアドレス
+    -   `password` (String): パスワード（ハッシュ化済み、画面には非表示）
+    -   `name` (String): 氏名
+    -   `nameRuby` (String): ふりがな
+    -   `createdAt` (Timestamp): 作成日時
+    -   `updatedAt` (Timestamp): 更新日時
+    -   `deletedAt` (Timestamp): 削除日時（NULL = 有効）
+    -   `lastLoginAt` (Timestamp): 最終ログイン日時
 
 ### リクエスト属性
 
-- **admins** (List<SystemAdminDTO>): システム管理者リスト
+-   **admins** (List<SystemAdminDTO>): システム管理者リスト
 
 ## エラーハンドリング
 
 ### システムエラー
 
-- **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
-  - エラーメッセージ: "データベースに不正な操作が行われました"
-- トランザクションは自動ロールバック
+-   **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
+    -   エラーメッセージ: "データベースに不正な操作が行われました"
+-   トランザクションは自動ロールバック
 
 ### 正常系
 
-- データが0件の場合でも正常に表示（空リスト）
-- 初期データとして10件の管理者が存在（`DatabaseInitListener`）
+-   データが 0 件の場合でも正常に表示（空リスト）
+-   初期データとして 10 件の管理者が存在（`DatabaseInitListener`）
 
 ## 備考
 
-- 一覧にソート・フィルタリング機能は実装されていない（機能一覧の備考欄参照）
-- 将来的にソート機能（氏名順、作成日時順など）の追加を検討
-- ページネーション機能は未実装（管理者数が少ないため）
-- 論理削除された管理者は表示されないが、データベースには残る
-- パスワードはハッシュ化されており、一覧画面には表示されない
+-   一覧にソート・フィルタリング機能は実装されていない（機能一覧の備考欄参照）
+-   将来的にソート機能（氏名順、作成日時順など）の追加を検討
+-   ページネーション機能は未実装（管理者数が少ないため）
+-   論理削除された管理者は表示されないが、データベースには残る
+-   パスワードはハッシュ化されており、一覧画面には表示されない
+-   **自分自身のアカウントは一覧から除外されるため、誤って自分自身を削除することを防止**
