機能定義書を丁寧な記載に修正

--- a/docs/機能定義/管理者/09_システム管理者削除.md
+++ b/docs/機能定義/管理者/09_システム管理者削除.md
@@ -1,4 +1,4 @@
-# 09_システム管理者削除（A04_04）
+# 09\_システム管理者削除（A04_04）
 
 ## 機能概要
 
@@ -8,11 +8,11 @@
 
 **実装済み**
 
-## URL一覧
+## URL 一覧
 
-| HTTPメソッド | URL | 画面/処理名 | 説明 |
-|---|---|---|---|
-| POST | `/admin/system_admin/delete` | 論理削除処理 | 指定IDの管理者を論理削除し、一覧画面へリダイレクト |
+| HTTP メソッド | URL                          | 画面/処理名  | 説明                                                 |
+| ------------- | ---------------------------- | ------------ | ---------------------------------------------------- |
+| POST          | `/admin/system_admin/delete` | 論理削除処理 | 指定 ID の管理者を論理削除し、一覧画面へリダイレクト |
 
 ## 画面フロー
 
@@ -31,29 +31,30 @@
 
 ### サービスクラス
 
-- **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java:370)
-- **メソッド**: `systemAdminDelete()`
+-   **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java:370)
+-   **メソッド**: `systemAdminDelete()`
 
 ### 処理フロー
 
 1. **パラメータ取得**
-   - `id`: 削除対象の管理者ID（UUID形式）
 
-2. **ID検証**
-   - `UUID.fromString(idStr)` でUUID形式チェック
-   - 不正な形式の場合: RuntimeExceptionをcatch
+    - `id`: 削除対象の管理者 ID（UUID 形式）
 
-3. **論理削除実行**
-   - `SystemAdminDAO.delete(id)` で論理削除実行
-   - `deleted_at` カラムに `CURRENT_TIMESTAMP` を設定
-   - 物理的なデータ削除は行わない
+2. **ID 検証・論理削除実行**
 
-4. **トランザクションコミット**
-   - 削除成功時にコミット
+    - `UUID.fromString(idStr)` で UUID 形式チェック
+    - 不正な形式の場合: `IllegalArgumentException` が発生し、`RuntimeException` として catch される
+    - `SystemAdminDAO.delete(id)` で論理削除実行
+    - `deleted_at` カラムに `CURRENT_TIMESTAMP` を設定
+    - 物理的なデータ削除は行わない
 
-5. **一覧画面へリダイレクト**
-   - `/admin/system_admin` へリダイレクト
-   - FrontControllerがリダイレクトを解釈
+3. **トランザクションコミット**
+
+    - 削除成功時にコミット
+
+4. **一覧画面へリダイレクト**
+    - `/admin/system_admin` へリダイレクト
+    - FrontController がリダイレクトを解釈
 
 ### トランザクション管理
 
@@ -71,29 +72,29 @@ try (TransactionManager tm = new TransactionManager()) {
 }
 ```
 
-### DAO呼び出し
+### DAO 呼び出し
 
-- **SystemAdminDAO**
-  - `delete(UUID id)`: 指定IDの管理者を論理削除
-    - SQL:
-      ```sql
-      UPDATE system_admins
-      SET deleted_at = CURRENT_TIMESTAMP
-      WHERE id = ?
-      ```
-    - 物理削除（DELETE文）は使用しない
-    - `deleted_at IS NULL` の条件で削除済みを判定
+-   **SystemAdminDAO**
+    -   `delete(UUID id)`: 指定 ID の管理者を論理削除
+        -   SQL:
+            ```sql
+            UPDATE system_admins
+            SET deleted_at = CURRENT_TIMESTAMP
+            WHERE id = ?
+            ```
+        -   物理削除（DELETE 文）は使用しない
+        -   `deleted_at IS NULL` の条件で削除済みを判定
 
 ### セキュリティ
 
-- **論理削除**: データは物理的に削除されず、データベースに残る
-- **UUID検証**: 不正なID形式をエラーとして処理
-- **削除確認**: フロントエンドのJavaScript確認ダイアログで二重確認
+-   **論理削除**: データは物理的に削除されず、データベースに残る
+-   **UUID 検証**: 不正な ID 形式をエラーとして処理
+-   **削除確認**: フロントエンドの JavaScript 確認ダイアログで二重確認
 
 ## ビューファイル
 
-- **専用ビューなし**: 削除処理後は一覧画面へリダイレクトされるため、専用JSPは不要
-- リダイレクト先: [/WEB-INF/jsp/systemadmin/admin/home.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/home.jsp)
+-   **専用ビューなし**: 削除処理後は一覧画面へリダイレクトされるため、専用 JSP は不要
+-   リダイレクト先: [/WEB-INF/jsp/systemadmin/admin/home.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/home.jsp)
 
 ### 画面表示項目
 
@@ -101,54 +102,54 @@ try (TransactionManager tm = new TransactionManager()) {
 
 ## データモデル
 
-### 使用するDTO
+### 使用する DTO
 
-- **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
-  - `id` (UUID): 管理者ID
-  - `deletedAt` (Timestamp): 削除日時（論理削除フラグ）
+-   **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
+    -   `id` (UUID): 管理者 ID
+    -   `deletedAt` (Timestamp): 削除日時（論理削除フラグ）
 
 ### パラメータ
 
-- **id** (String): 削除対象の管理者ID（UUID形式）
+-   **id** (String): 削除対象の管理者 ID（UUID 形式）
 
 ## エラーハンドリング
 
 ### システムエラー
 
-- **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
-  - エラーメッセージ: "データベースに不正な操作が行われました"
-- **UUID形式エラー**: RuntimeExceptionとして処理
-- トランザクションは自動ロールバック
+-   **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
+    -   エラーメッセージ: "データベースに不正な操作が行われました"
+    -   `IllegalArgumentException`（UUID 形式エラー）も含む
+-   トランザクションは自動ロールバック（try-with-resources で自動処理）
 
 ### 正常系
 
-- 削除対象が存在しない場合でもエラーにならない（UPDATE文で0件更新）
-- 既に削除済み（`deleted_at IS NOT NULL`）の管理者を再削除してもエラーにならない
+-   削除対象が存在しない場合でもエラーにならない（UPDATE 文で 0 件更新）
+-   既に削除済み（`deleted_at IS NOT NULL`）の管理者を再削除してもエラーにならない
 
 ## 備考
 
 ### 論理削除の利点
 
-- **データ復旧可能**: 誤削除時に `deleted_at` を NULL に戻すことで復元可能
-- **履歴保持**: 削除済み管理者のデータが残るため、過去の操作履歴を追跡可能
-- **外部キー制約**: 他のテーブルから参照されていても削除可能
+-   **データ復旧可能**: 誤削除時に `deleted_at` を NULL に戻すことで復元可能
+-   **履歴保持**: 削除済み管理者のデータが残るため、過去の操作履歴を追跡可能
+-   **外部キー制約**: 他のテーブルから参照されていても削除可能
 
 ### 論理削除の仕様
 
-- `deleted_at IS NULL`: 有効なアカウント
-- `deleted_at IS NOT NULL`: 削除済みアカウント
-- 一覧表示、ログイン、編集などの全ての処理で `deleted_at IS NULL` 条件を使用
-- 物理削除機能は実装されていない（将来的にバッチ処理で古いデータを物理削除する可能性あり）
+-   `deleted_at IS NULL`: 有効なアカウント
+-   `deleted_at IS NOT NULL`: 削除済みアカウント
+-   一覧表示、ログイン、編集などの全ての処理で `deleted_at IS NULL` 条件を使用
+-   物理削除機能は実装されていない（将来的にバッチ処理で古いデータを物理削除する可能性あり）
 
 ### 制限事項
 
-- **自分自身の削除**: 可能（セッションは維持されるため、ログアウトまで操作可能）
-- **削除確認**: フロントエンドのJavaScript確認ダイアログのみ（サーバー側の確認画面なし）
-- **削除完了メッセージ**: 一覧画面へリダイレクト後、完了メッセージは表示されない
-- **削除取消機能**: 未実装（データベースから直接 `deleted_at` を NULL に戻す必要がある）
+-   **自分自身の削除**: 可能（セッションは維持されるため、ログアウトまで操作可能）
+-   **削除確認**: フロントエンドの JavaScript 確認ダイアログのみ（サーバー側の確認画面なし）
+-   **削除完了メッセージ**: 一覧画面へリダイレクト後、完了メッセージは表示されない
+-   **削除取消機能**: 未実装（データベースから直接 `deleted_at` を NULL に戻す必要がある）
 
 ### セキュリティ考慮事項
 
-- 削除処理はPOSTメソッドのみ（GETリンクでは実行不可）
-- セッションチェックはFrontControllerで実施済み（管理者権限必須）
-- CSRF対策は未実装（将来的にトークン検証の追加を検討）
+-   削除処理は POST メソッドのみ（GET リンクでは実行不可）
+-   セッションチェックは FrontController で実施済み（管理者権限必須）
+-   CSRF 対策は未実装（将来的にトークン検証の追加を検討）
