--- a/docs/機能定義/管理者/07_システム管理者新規登録.md
+++ b/docs/機能定義/管理者/07_システム管理者新規登録.md
@@ -1,20 +1,20 @@
-# 07_システム管理者新規登録（A04_02）
+# 07\_システム管理者新規登録（A04_02）
 
 ## 機能概要
 
-新しいシステム管理者（全権ユーザー）を登録する機能です。入力→確認→確定の3画面構成で、メールアドレスの重複チェックとパスワード強度チェックを実施します。
+新しいシステム管理者（全権ユーザー）を登録する機能です。入力 → 確認 → 確定の 3 画面構成で、メールアドレスの重複チェックとパスワード強度チェックを実施します。
 
 ## 実装状況
 
 **実装済み**
 
-## URL一覧
+## URL 一覧
 
-| HTTPメソッド | URL | 画面/処理名 | 説明 |
-|---|---|---|---|
-| GET | `/admin/system_admin/register` | 登録フォーム表示 | 新規登録の入力フォームを表示 |
-| POST | `/admin/system_admin/register_check` | 登録確認 | 入力内容をバリデーション後、確認画面を表示 |
-| POST | `/admin/system_admin/register_done` | 登録確定 | データベースに登録し、完了画面を表示 |
+| HTTP メソッド | URL                                  | 画面/処理名      | 説明                                       |
+| ------------- | ------------------------------------ | ---------------- | ------------------------------------------ |
+| GET           | `/admin/system_admin/register`       | 登録フォーム表示 | 新規登録の入力フォームを表示               |
+| POST          | `/admin/system_admin/register_check` | 登録確認         | 入力内容をバリデーション後、確認画面を表示 |
+| POST          | `/admin/system_admin/register_done`  | 登録確定         | データベースに登録し、完了画面を表示       |
 
 ## 画面フロー
 
@@ -41,71 +41,79 @@
 
 ### サービスクラス
 
-- **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java)
-- **メソッド**:
-  - `systemAdminRegister()` (106行目): 登録フォーム表示
-  - `systemAdminRegisterCheck()` (119行目): 登録確認
-  - `systemAdminRegisterDone()` (152行目): 登録確定
+-   **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java)
+-   **メソッド**:
+    -   `systemAdminRegister()` (106 行目): 登録フォーム表示
+    -   `systemAdminRegisterCheck()` (119 行目): 登録確認
+    -   `systemAdminRegisterDone()` (152 行目): 登録確定
 
 ### 処理フロー
 
 #### 1. 登録フォーム表示（GET `/admin/system_admin/register`）
 
 1. **フォーム表示**
-   - データベースアクセスなし
-   - 空のフォームを表示
-   - 登録ビュー（`systemadmin/admin/register`）へフォワード
+    - データベースアクセスなし
+    - 空のフォームを表示
+    - 登録ビュー（`systemadmin/admin/register`）へフォワード
 
 #### 2. 登録確認（POST `/admin/system_admin/register_check`）
 
 1. **入力パラメータ取得**
-   - `mail`: メールアドレス（必須）
-   - `password`: パスワード（必須）
-   - `name`: 氏名（必須）
-   - `nameRuby`: ふりがな（任意）
+
+    - `mail`: メールアドレス（必須）
+    - `password`: パスワード（必須）
+    - `name`: 氏名（必須）
+    - `nameRuby`: ふりがな（任意）
 
 2. **バリデーション**
-   - 必須チェック:
-     - `validation.isNull("氏名", name)`
-     - `validation.isNull("メールアドレス", mail)`
-     - `validation.isNull("パスワード", password)`
-   - メールアドレス形式チェック: `validation.isEmail(mail)`
-   - パスワード強度チェック: `validation.isStrongPassword(password)`
-     - 8文字以上
-     - 英大文字・小文字・数字を含む
+
+    - 必須チェック:
+        - `validation.isNull("氏名", name)`
+        - `validation.isNull("メールアドレス", mail)`
+        - `validation.isNull("パスワード", password)`
+    - メールアドレス形式チェック: `validation.isEmail(mail)`
+    - パスワード強度チェック: `validation.isStrongPassword(password)`
+        - 8 文字以上
+        - 英大文字・小文字・数字を含む
+    - **注意**: メール重複チェックは確認画面では実施しない（確定処理で実施）
 
 3. **エラー時の処理**
-   - `errorMsg` 属性にエラーメッセージを設定
-   - 入力値を属性に戻す（フォーム再表示用）
-   - 登録入力画面へ戻る
+
+    - `errorMsg` 属性にエラーメッセージを設定
+    - 入力値を属性に戻す（フォーム再表示用）
+    - 登録入力画面へ戻る
 
 4. **成功時の処理**
-   - 入力値を属性に設定
-   - 確認画面（`systemadmin/admin/register_check`）へフォワード
+    - 入力値を属性に設定
+    - 確認画面（`systemadmin/admin/register_check`）へフォワード
 
 #### 3. 登録確定（POST `/admin/system_admin/register_done`）
 
 1. **入力パラメータ取得**
-   - 確認画面と同じパラメータを再取得
+
+    - 確認画面と同じパラメータを再取得
 
 2. **バリデーション（再実行）**
-   - 確認画面と同じバリデーションを再度実行
-   - ブラウザバック対策、直接URL入力対策
+
+    - 確認画面と同じバリデーションを再度実行
+    - ブラウザバック対策、直接 URL 入力対策
 
 3. **メール重複チェック**
-   - `SystemAdminDAO.mailExists(mail)` でメール重複確認
-   - 重複時: "そのメールアドレスは既に登録済みです。" エラー
-   - エラー時: 入力値を保持して登録入力画面へ戻る
+
+    - `SystemAdminDAO.mailExists(mail)` でメール重複確認
+    - 重複時: "そのメールアドレスは既に登録済みです。" エラー
+    - エラー時: 入力値を保持して登録入力画面へ戻る
 
 4. **データベース登録**
-   - `SystemAdminDTO` オブジェクト作成
-   - パスワードをBCryptでハッシュ化: `PasswordUtil.hashPassword(password)`
-   - `SystemAdminDAO.insert(dto)` で登録実行
-   - トランザクションコミット
+
+    - `SystemAdminDTO` オブジェクト作成
+    - パスワードを BCrypt でハッシュ化: `PasswordUtil.hashPassword(password)`
+    - `SystemAdminDAO.insert(dto)` で登録実行
+    - トランザクションコミット
 
 5. **完了画面表示**
-   - `message` 属性に "登録が完了しました（件数:1）" を設定
-   - 完了画面（`systemadmin/admin/register_done`）へフォワード
+    - `message` 属性に "登録が完了しました（件数:1）" を設定
+    - 完了画面（`systemadmin/admin/register_done`）へフォワード
 
 ### トランザクション管理
 
@@ -124,90 +132,90 @@ try (TransactionManager tm = new TransactionManager()) {
 }
 ```
 
-### DAO呼び出し
+### DAO 呼び出し
 
-- **SystemAdminDAO**
-  - `mailExists(String mail)`: メールアドレス重複チェック
-    - SQL: `SELECT COUNT(*) FROM system_admins WHERE mail = ? AND deleted_at IS NULL`
-  - `insert(SystemAdminDTO dto)`: 管理者情報を登録
-    - SQL:
-      ```sql
-      INSERT INTO system_admins (id, mail, password, name, name_ruby, created_at, updated_at)
-      VALUES (gen_random_uuid(), ?, ?, ?, ?, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP)
-      ```
+-   **SystemAdminDAO**
+    -   `mailExists(String mail)`: メールアドレス重複チェック
+        -   SQL: `SELECT COUNT(*) FROM system_admins WHERE mail = ? AND deleted_at IS NULL`
+    -   `insert(SystemAdminDTO dto)`: 管理者情報を登録
+        -   SQL:
+            ```sql
+            INSERT INTO system_admins (id, mail, password, name, name_ruby, created_at, updated_at)
+            VALUES (gen_random_uuid(), ?, ?, ?, ?, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP)
+            ```
 
 ### セキュリティ
 
-- **パスワード強度チェック**: 8文字以上、英大小数字を含む必要がある
-- **パスワードハッシュ化**: BCrypt（コストファクタ10）で保存
-- **メール重複チェック**: 同じメールアドレスは登録不可
-- **二重バリデーション**: 確認画面と確定処理で2回検証（改ざん対策）
+-   **パスワード強度チェック**: 8 文字以上、英大小数字を含む必要がある
+-   **パスワードハッシュ化**: BCrypt（コストファクタ 10）で保存
+-   **メール重複チェック**: 同じメールアドレスは登録不可
+-   **二重バリデーション**: 確認画面と確定処理で 2 回検証（改ざん対策）
 
 ## ビューファイル
 
-- **登録入力画面**: [/WEB-INF/jsp/systemadmin/admin/register.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/register.jsp)
-- **登録確認画面**: [/WEB-INF/jsp/systemadmin/admin/register_check.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/register_check.jsp)
-- **登録完了画面**: [/WEB-INF/jsp/systemadmin/admin/register_done.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/register_done.jsp)
+-   **登録入力画面**: [/WEB-INF/jsp/systemadmin/admin/register.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/register.jsp)
+-   **登録確認画面**: [/WEB-INF/jsp/systemadmin/admin/register_check.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/register_check.jsp)
+-   **登録完了画面**: [/WEB-INF/jsp/systemadmin/admin/register_done.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/register_done.jsp)
 
 ### 画面表示項目（登録入力画面）
 
-| 項目 | 必須 | 説明 |
-|-----|------|------|
-| **メールアドレス** | ○ | ログインIDとして使用、重複不可 |
-| **パスワード** | ○ | 8文字以上、英大小数字含む |
-| **氏名** | ○ | 管理者の氏名 |
-| **ふりがな** | - | 氏名のふりがな（任意） |
+| 項目               | 必須 | 説明                             |
+| ------------------ | ---- | -------------------------------- |
+| **メールアドレス** | ○    | ログイン ID として使用、重複不可 |
+| **パスワード**     | ○    | 8 文字以上、英大小数字含む       |
+| **氏名**           | ○    | 管理者の氏名                     |
+| **ふりがな**       | -    | 氏名のふりがな（任意）           |
 
 ### 画面アクション
 
-- **確認ボタン**: POST `/admin/system_admin/register_check` でバリデーション実行
-- **戻るボタン**: 一覧画面へ戻る
+-   **確認ボタン**: POST `/admin/system_admin/register_check` でバリデーション実行
+-   **戻るボタン**: 一覧画面へ戻る
 
 ## データモデル
 
-### 使用するDTO
+### 使用する DTO
 
-- **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
-  - `id` (UUID): 自動生成（`gen_random_uuid()`）
-  - `mail` (String): メールアドレス
-  - `password` (String): BCryptハッシュ化パスワード
-  - `name` (String): 氏名
-  - `nameRuby` (String): ふりがな
-  - `createdAt` (Timestamp): 自動設定（`CURRENT_TIMESTAMP`）
-  - `updatedAt` (Timestamp): 自動設定（`CURRENT_TIMESTAMP`）
+-   **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
+    -   `id` (UUID): 自動生成（`gen_random_uuid()`）
+    -   `mail` (String): メールアドレス
+    -   `password` (String): BCrypt ハッシュ化パスワード
+    -   `name` (String): 氏名
+    -   `nameRuby` (String): ふりがな
+    -   `createdAt` (Timestamp): 自動設定（`CURRENT_TIMESTAMP`）
+    -   `updatedAt` (Timestamp): 自動設定（`CURRENT_TIMESTAMP`）
 
 ### リクエスト属性
 
-- **errorMsg** (String): バリデーションエラーメッセージ
-- **message** (String): 登録完了メッセージ
-- **入力値の属性**（エラー時の再表示用）:
-  - `mail`, `name`, `nameRuby`, `password`
+-   **errorMsg** (String): バリデーションエラーメッセージ
+-   **message** (String): 登録完了メッセージ
+-   **入力値の属性**（エラー時の再表示用）:
+    -   `mail`, `name`, `nameRuby`, `password`
 
 ## エラーハンドリング
 
 ### バリデーションエラー
 
-- **必須チェックエラー**: "氏名 を入力してください" など
-- **メール形式エラー**: "メールアドレス の形式が正しくありません"
-- **パスワード強度エラー**: "パスワードは8文字以上で、英大文字・小文字・数字を含む必要があります"
+-   **必須チェックエラー**: "氏名 を入力してください" など
+-   **メール形式エラー**: "メールアドレス の形式が正しくありません"
+-   **パスワード強度エラー**: "パスワードは 8 文字以上で、英大文字・小文字・数字を含む必要があります"
 
 ### ビジネスロジックエラー
 
-- **メール重複エラー**: "そのメールアドレスは既に登録済みです。"
-  - 登録入力画面へ戻り、入力値を保持
+-   **メール重複エラー**: "そのメールアドレスは既に登録済みです。"
+    -   登録入力画面へ戻り、入力値を保持
 
 ### システムエラー
 
-- **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
-  - エラーメッセージ: "データベースに不正な操作が行われました"
-- トランザクションは自動ロールバック
+-   **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
+    -   エラーメッセージ: "データベースに不正な操作が行われました"
+-   トランザクションは自動ロールバック
 
 ## 備考
 
-- IDはデータベース側で自動生成（UUID）
-- 作成日時・更新日時も自動設定
-- 削除日時（`deleted_at`）は初期値NULL（有効状態）
-- 最終ログイン日時（`last_login_at`）は初期値NULL
-- 登録完了後、一覧画面へ戻るリンクが表示される
-- パスワードは平文で保存されず、必ずBCryptハッシュで保存される
-- ふりがなは任意項目のため、未入力でも登録可能
+-   ID はデータベース側で自動生成（UUID）
+-   作成日時・更新日時も自動設定
+-   削除日時（`deleted_at`）は初期値 NULL（有効状態）
+-   最終ログイン日時（`last_login_at`）は初期値 NULL
+-   登録完了後、一覧画面へ戻るリンクが表示される
+-   パスワードは平文で保存されず、必ず BCrypt ハッシュで保存される
+-   ふりがなは任意項目のため、未入力でも登録可能
