--- a/docs/機能定義/管理者/08_システム管理者編集.md
+++ b/docs/機能定義/管理者/08_システム管理者編集.md
@@ -1,20 +1,20 @@
-# 08_システム管理者編集（A04_03）
+# 08\_システム管理者編集（A04_03）
 
 ## 機能概要
 
-既存のシステム管理者（全権ユーザー）の情報を編集する機能です。入力→確認→確定の3画面構成で、メールアドレスの重複チェック（自ID除外）とパスワード変更（任意）を実施します。
+既存のシステム管理者（全権ユーザー）の情報を編集する機能です。入力 → 確認 → 確定の 3 画面構成で、メールアドレスの重複チェック（自 ID 除外）とパスワード変更（任意）を実施します。
 
 ## 実装状況
 
 **実装済み**
 
-## URL一覧
+## URL 一覧
 
-| HTTPメソッド | URL | 画面/処理名 | 説明 |
-|---|---|---|---|
-| GET | `/admin/system_admin/edit?id={管理者ID}` | 編集フォーム表示 | 指定IDの管理者情報を取得し、編集フォームを表示 |
-| POST | `/admin/system_admin/edit_check` | 編集確認 | 入力内容をバリデーション後、確認画面を表示 |
-| POST | `/admin/system_admin/edit_done` | 編集確定 | データベースを更新し、完了画面を表示 |
+| HTTP メソッド | URL                                      | 画面/処理名      | 説明                                             |
+| ------------- | ---------------------------------------- | ---------------- | ------------------------------------------------ |
+| GET           | `/admin/system_admin/edit?id={管理者ID}` | 編集フォーム表示 | 指定 ID の管理者情報を取得し、編集フォームを表示 |
+| POST          | `/admin/system_admin/edit_check`         | 編集確認         | 入力内容をバリデーション後、確認画面を表示       |
+| POST          | `/admin/system_admin/edit_done`          | 編集確定         | データベースを更新し、完了画面を表示             |
 
 ## 画面フロー
 
@@ -43,93 +43,115 @@
 
 ### サービスクラス
 
-- **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java)
-- **メソッド**:
-  - `systemAdminEdit()` (213行目): 編集フォーム表示
-  - `systemAdminEditCheck()` (241行目): 編集確認
-  - `systemAdminEditDone()` (288行目): 編集確定
+-   **クラス**: [SystemAdminService.java](../../../src/main/java/service/SystemAdminService.java)
+-   **メソッド**:
+    -   `systemAdminEdit()` (213 行目): 編集フォーム表示
+    -   `systemAdminEditCheck()` (241 行目): 編集確認
+    -   `systemAdminEditDone()` (288 行目): 編集確定
 
 ### 処理フロー
 
 #### 1. 編集フォーム表示（GET `/admin/system_admin/edit?id={UUID}`）
 
 1. **パラメータ取得**
-   - `id`: 編集対象の管理者ID（UUID形式）
 
-2. **ID検証**
-   - `UUID.fromString(idStr)` でUUID形式チェック
-   - 不正な形式の場合: "不正なIDが指定されました。" エラー
+    - `id`: 編集対象の管理者 ID（UUID 形式）
+
+2. **ID 検証**
+
+    - `UUID.fromString(idStr)` で UUID 形式チェック
+    - 不正な形式の場合: "不正な ID が指定されました。" エラー
 
 3. **既存データ取得**
-   - `SystemAdminDAO.selectById(id)` で管理者情報を取得
-   - 存在しない場合: NULLまたは例外
+
+    - `SystemAdminDAO.selectById(id)` で管理者情報を取得
+    - 存在しない場合: NULL または例外
 
 4. **フォーム表示**
-   - `admin` 属性に既存データを設定
-   - 編集ビュー（`systemadmin/admin/edit`）へフォワード
+    - `admin` 属性に既存データを設定
+    - 編集ビュー（`systemadmin/admin/edit`）へフォワード
 
 #### 2. 編集確認（POST `/admin/system_admin/edit_check`）
 
 1. **入力パラメータ取得**
-   - `id`: 管理者ID（hidden）
-   - `mail`: メールアドレス（必須）
-   - `password`: パスワード（任意、空白の場合は変更なし）
-   - `name`: 氏名（必須）
-   - `nameRuby`: ふりがな（任意）
+
+    - `id`: 管理者 ID（hidden）
+    - `mail`: メールアドレス（必須）
+    - `password`: パスワード（任意、空白の場合は変更なし）
+    - `name`: 氏名（必須）
+    - `nameRuby`: ふりがな（任意）
 
 2. **バリデーション**
-   - 必須チェック:
-     - `validation.isNull("ID", idStr)`
-     - `validation.isNull("氏名", name)`
-     - `validation.isNull("メールアドレス", mail)`
-   - メールアドレス形式チェック: `validation.isEmail(mail)`
 
-3. **メール重複チェック（自ID除外）**
-   - `SystemAdminDAO.mailExistsExceptId(mail, id)` で重複確認
-   - 自分以外で同じメールアドレスが存在する場合: "そのメールアドレスは既に登録済みです。" エラー
+    - 必須チェック:
+        - `validation.isNull("ID", idStr)`
+        - `validation.isNull("氏名", name)`
+        - `validation.isNull("メールアドレス", mail)`
+    - メールアドレス形式チェック: `validation.isEmail(mail)`
+
+3. **メール重複チェック（自 ID 除外）**
+
+    - バリデーションエラーがない場合のみ実施
+    - `SystemAdminDAO.mailExistsExceptId(mail, id)` で重複確認
+    - 自分以外で同じメールアドレスが存在する場合: "そのメールアドレスは既に登録済みです。" エラー
+    - **注意**: パスワードの強度チェックは確認画面では実施しない（確定処理で実施）
 
 4. **エラー時の処理**
-   - `errorMsg` 属性にエラーメッセージを設定
-   - ID、入力値を属性に戻す（フォーム再表示用）
-   - 編集入力画面へ戻る
+
+    - `errorMsg` 属性にエラーメッセージを設定
+    - ID、入力値を属性に戻す（フォーム再表示用）
+    - 編集入力画面へ戻る
 
 5. **成功時の処理**
-   - ID、入力値を属性に設定
-   - 確認画面（`systemadmin/admin/edit_check`）へフォワード
+    - ID、入力値を属性に設定
+    - 確認画面（`systemadmin/admin/edit_check`）へフォワード
 
 #### 3. 編集確定（POST `/admin/system_admin/edit_done`）
 
 1. **入力パラメータ取得・バリデーション**
-   - 確認画面と同じパラメータを再取得
-   - 同じバリデーションを再度実行（ブラウザバック対策）
+
+    - 確認画面と同じパラメータを再取得
+    - 必須チェック:
+        - `validation.isNull("ID", idStr)`
+        - `validation.isNull("氏名", name)`
+        - `validation.isNull("メールアドレス", mail)`
+    - メールアドレス形式チェック: `validation.isEmail(mail)`
+    - **注意**: パスワードの強度チェックは、パスワードが入力されている場合のみ実施（後述）
 
 2. **メール重複チェック（再実行）**
-   - 確定時にも再度メール重複チェックを実施
+
+    - `SystemAdminDAO.mailExistsExceptId(mail, id)` で再度メール重複チェックを実施
+    - 自分以外で同じメールアドレスが存在する場合: "そのメールアドレスは既に登録済みです。" エラー
+    - エラー時: 入力値を保持して編集入力画面へ戻る
 
 3. **既存データ取得**
-   - `SystemAdminDAO.selectById(id)` で最新の管理者情報を取得
-   - 存在しない場合: "対象データが存在しません。" エラー
+
+    - `SystemAdminDAO.selectById(id)` で最新の管理者情報を取得
+    - 存在しない場合（`dto.getId() == null`）: "対象データが存在しません。" エラー
+    - エラー時: エラーページへリダイレクト
 
 4. **更新データ作成**
-   - DTOオブジェクトに新しい値を設定:
-     - `mail`: 新しいメールアドレス
-     - `name`: 新しい氏名
-     - `nameRuby`: 新しいふりがな
-   - パスワード処理:
-     - パスワードが入力されている場合:
-       - 強度チェック: `validation.isStrongPassword(password)`
-       - ハッシュ化: `PasswordUtil.hashPassword(password)`
-     - パスワードが空白の場合:
-       - 既存のパスワード（ハッシュ）を据え置き
+
+    - DTO オブジェクトに新しい値を設定:
+        - `mail`: 新しいメールアドレス
+        - `name`: 新しい氏名
+        - `nameRuby`: 新しいふりがな
+    - パスワード処理:
+        - パスワードが入力されている場合（`password != null && !password.isBlank()`）:
+            - 強度チェック: `validation.isStrongPassword(password)`
+            - 強度チェックエラー時: 入力値を保持して編集入力画面へ戻る
+            - ハッシュ化: `PasswordUtil.hashPassword(password)`
+        - パスワードが空白の場合:
+            - 既存のパスワード（ハッシュ）を据え置き（DTO の既存値をそのまま使用）
 
 5. **データベース更新**
-   - `SystemAdminDAO.update(dto)` で更新実行
-   - 更新件数が1でない場合: 異常として処理
-   - トランザクションコミット
+
+    - `SystemAdminDAO.update(dto)` で更新実行
+    - トランザクションコミット
 
 6. **完了画面表示**
-   - `message` 属性に "更新が完了しました（件数:1）" を設定
-   - 完了画面（`systemadmin/admin/edit_done`）へフォワード
+    - `message` 属性に "更新が完了しました（件数:" + num + "）" を設定
+    - 完了画面（`systemadmin/admin/edit_done`）へフォワード
 
 ### トランザクション管理
 
@@ -155,99 +177,101 @@ try (TransactionManager tm = new TransactionManager()) {
 }
 ```
 
-### DAO呼び出し
+### DAO 呼び出し
 
-- **SystemAdminDAO**
-  - `selectById(UUID id)`: 指定IDの管理者情報を取得
-    - SQL: `SELECT * FROM system_admins WHERE id = ? AND deleted_at IS NULL`
-  - `mailExistsExceptId(String mail, UUID exceptId)`: 自ID以外でメール重複チェック
-    - SQL: `SELECT COUNT(*) FROM system_admins WHERE mail = ? AND id != ? AND deleted_at IS NULL`
-  - `update(SystemAdminDTO dto)`: 管理者情報を更新
-    - SQL:
-      ```sql
-      UPDATE system_admins
-      SET mail = ?, password = ?, name = ?, name_ruby = ?, updated_at = CURRENT_TIMESTAMP
-      WHERE id = ?
-      ```
+-   **SystemAdminDAO**
+    -   `selectById(UUID id)`: 指定 ID の管理者情報を取得
+        -   SQL: `SELECT * FROM system_admins WHERE id = ? AND deleted_at IS NULL`
+    -   `mailExistsExceptId(String mail, UUID exceptId)`: 自 ID 以外でメール重複チェック
+        -   SQL: `SELECT COUNT(*) FROM system_admins WHERE mail = ? AND id != ? AND deleted_at IS NULL`
+    -   `update(SystemAdminDTO dto)`: 管理者情報を更新
+        -   SQL:
+            ```sql
+            UPDATE system_admins
+            SET mail = ?, password = ?, name = ?, name_ruby = ?, updated_at = CURRENT_TIMESTAMP
+            WHERE id = ?
+            ```
 
 ### セキュリティ
 
-- **パスワード強度チェック**: パスワード変更時のみ実施（8文字以上、英大小数字含む）
-- **パスワードハッシュ化**: BCrypt（コストファクタ10）で保存
-- **メール重複チェック**: 自分以外のアカウントとの重複を防止
-- **二重バリデーション**: 確認画面と確定処理で2回検証（改ざん対策）
-- **UUID検証**: 不正なID形式をエラーとして処理
+-   **パスワード強度チェック**: パスワード変更時のみ実施（8 文字以上、英大小数字含む）
+    -   確認画面では実施しない（確定処理で実施）
+-   **パスワードハッシュ化**: BCrypt（コストファクタ 10）で保存
+-   **メール重複チェック**: 自分以外のアカウントとの重複を防止
+    -   確認画面と確定処理の両方で実施（二重チェック）
+-   **二重バリデーション**: 確認画面と確定処理で 2 回検証（改ざん対策）
+-   **UUID 検証**: 不正な ID 形式をエラーとして処理
 
 ## ビューファイル
 
-- **編集入力画面**: [/WEB-INF/jsp/systemadmin/admin/edit.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/edit.jsp)
-- **編集確認画面**: [/WEB-INF/jsp/systemadmin/admin/edit_check.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/edit_check.jsp)
-- **編集完了画面**: [/WEB-INF/jsp/systemadmin/admin/edit_done.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/edit_done.jsp)
+-   **編集入力画面**: [/WEB-INF/jsp/systemadmin/admin/edit.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/edit.jsp)
+-   **編集確認画面**: [/WEB-INF/jsp/systemadmin/admin/edit_check.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/edit_check.jsp)
+-   **編集完了画面**: [/WEB-INF/jsp/systemadmin/admin/edit_done.jsp](../../../src/main/webapp/WEB-INF/jsp/systemadmin/admin/edit_done.jsp)
 
 ### 画面表示項目（編集入力画面）
 
-| 項目 | 必須 | 説明 |
-|-----|------|------|
-| **ID** | - | 管理者ID（hidden、変更不可） |
-| **メールアドレス** | ○ | 現在のメールアドレスが初期表示、変更可能 |
-| **パスワード** | - | 空白の場合は変更なし |
-| **氏名** | ○ | 現在の氏名が初期表示 |
-| **ふりがな** | - | 現在のふりがなが初期表示 |
+| 項目               | 必須 | 説明                                     |
+| ------------------ | ---- | ---------------------------------------- |
+| **ID**             | -    | 管理者 ID（hidden、変更不可）            |
+| **メールアドレス** | ○    | 現在のメールアドレスが初期表示、変更可能 |
+| **パスワード**     | -    | 空白の場合は変更なし                     |
+| **氏名**           | ○    | 現在の氏名が初期表示                     |
+| **ふりがな**       | -    | 現在のふりがなが初期表示                 |
 
 ### 画面アクション
 
-- **確認ボタン**: POST `/admin/system_admin/edit_check` でバリデーション実行
-- **戻るボタン**: 一覧画面へ戻る
+-   **確認ボタン**: POST `/admin/system_admin/edit_check` でバリデーション実行
+-   **戻るボタン**: 一覧画面へ戻る
 
 ## データモデル
 
-### 使用するDTO
+### 使用する DTO
 
-- **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
-  - `id` (UUID): 管理者ID（変更不可）
-  - `mail` (String): メールアドレス
-  - `password` (String): BCryptハッシュ化パスワード
-  - `name` (String): 氏名
-  - `nameRuby` (String): ふりがな
-  - `updatedAt` (Timestamp): 更新日時（自動更新）
+-   **SystemAdminDTO** ([dto/SystemAdminDTO.java](../../../src/main/java/dto/SystemAdminDTO.java))
+    -   `id` (UUID): 管理者 ID（変更不可）
+    -   `mail` (String): メールアドレス
+    -   `password` (String): BCrypt ハッシュ化パスワード
+    -   `name` (String): 氏名
+    -   `nameRuby` (String): ふりがな
+    -   `updatedAt` (Timestamp): 更新日時（自動更新）
 
 ### リクエスト属性
 
-- **admin** (SystemAdminDTO): 編集対象の管理者情報（初期表示用）
-- **errorMsg** (String): バリデーションエラーメッセージ
-- **message** (String): 更新完了メッセージ
-- **id** (String): 管理者ID（hidden用）
-- **入力値の属性**（エラー時の再表示用）
+-   **admin** (SystemAdminDTO): 編集対象の管理者情報（初期表示用）
+-   **errorMsg** (String): バリデーションエラーメッセージ
+-   **message** (String): 更新完了メッセージ
+-   **id** (String): 管理者 ID（hidden 用）
+-   **入力値の属性**（エラー時の再表示用）
 
 ## エラーハンドリング
 
 ### バリデーションエラー
 
-- **必須チェックエラー**: "氏名 を入力してください" など
-- **メール形式エラー**: "メールアドレス の形式が正しくありません"
-- **パスワード強度エラー**: "パスワードは8文字以上で、英大文字・小文字・数字を含む必要があります"（変更時のみ）
+-   **必須チェックエラー**: "氏名 を入力してください" など
+-   **メール形式エラー**: "メールアドレス の形式が正しくありません"
+-   **パスワード強度エラー**: "パスワードは 8 文字以上で、英大文字・小文字・数字を含む必要があります"（変更時のみ）
 
 ### ビジネスロジックエラー
 
-- **メール重複エラー**: "そのメールアドレスは既に登録済みです。"
-  - 編集入力画面へ戻り、入力値を保持
-- **データ不在エラー**: "対象データが存在しません。"
-  - エラーページへリダイレクト
-- **ID形式エラー**: "不正なIDが指定されました。"
-  - エラーページへリダイレクト
+-   **メール重複エラー**: "そのメールアドレスは既に登録済みです。"
+    -   編集入力画面へ戻り、入力値を保持
+-   **データ不在エラー**: "対象データが存在しません。"
+    -   エラーページへリダイレクト
+-   **ID 形式エラー**: "不正な ID が指定されました。"
+    -   エラーページへリダイレクト
 
 ### システムエラー
 
-- **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
-  - エラーメッセージ: "データベースに不正な操作が行われました"
-- トランザクションは自動ロールバック
+-   **RuntimeException**: エラーページ（`/admin/error`）へリダイレクト
+    -   エラーメッセージ: "データベースに不正な操作が行われました"
+-   トランザクションは自動ロールバック
 
 ## 備考
 
-- パスワードフィールドを空白のまま送信すると、パスワードは変更されない
-- メールアドレス変更時も既存のパスワード（ハッシュ）は維持される
-- 更新日時（`updated_at`）は自動更新される
-- 作成日時（`created_at`）、削除日時（`deleted_at`）は変更されない
-- 最終ログイン日時（`last_login_at`）は変更されない
-- 編集完了後、一覧画面へ戻るリンクが表示される
-- 自分自身のアカウントを編集する場合、セッション情報は自動更新されない（マイページ編集機能とは異なる）
+-   パスワードフィールドを空白のまま送信すると、パスワードは変更されない
+-   メールアドレス変更時も既存のパスワード（ハッシュ）は維持される
+-   更新日時（`updated_at`）は自動更新される
+-   作成日時（`created_at`）、削除日時（`deleted_at`）は変更されない
+-   最終ログイン日時（`last_login_at`）は変更されない
+-   編集完了後、一覧画面へ戻るリンクが表示される
+-   自分自身のアカウントを編集する場合、セッション情報は自動更新されない（マイページ編集機能とは異なる）
