adminマイページを顧客秘書に合わせて修正

--- a/docs/機能定義/管理者/04_マイページ表示.md
+++ b/docs/機能定義/管理者/04_マイページ表示.md
@@ -12,14 +12,14 @@
 
 | HTTPメソッド | URL | 画面/処理名 | 説明 |
 |---|---|---|---|
-| GET | `/admin/mypage` | マイページ表示 | 自身のアカウント情報を表示 |
+| GET | `/admin/mypage/home` | マイページ表示 | 自身のアカウント情報を表示 |
 
 ## 画面フロー
 
 ```
 [任意の管理者画面]
     ↓ マイページリンククリック
-    ↓ GET /admin/mypage
+    ↓ GET /admin/mypage/home
     ↓
 [マイページ画面] - アカウント情報表示
     ↓
@@ -30,8 +30,8 @@
 
 ### サービスクラス
 
-- **クラス**: [CommonService.java](../../../src/main/java/service/CommonService.java:355)
-- **メソッド**: `adminMyPage()`
+- **クラス**: [CommonService.java](../../../src/main/java/service/CommonService.java)
+- **メソッド**: `adminMyPageHome()`
 
 ### 処理フロー
 
@@ -39,26 +39,34 @@
    - `req.getSession(false)` で既存のセッションを取得
    - セッションが存在しない場合は `/admin` へリダイレクト
 
-2. **ログインユーザー取得**
-   - セッションから `loginUser` 属性を取得
-   - `loginUser` または `systemAdmin` が `null` の場合は `/admin` へリダイレクト
-   - `systemAdmin.id` が `null` の場合も `/admin` へリダイレクト
+2. **ログインユーザー確認**
+   - セッションから `loginUser` 属性を取得し、管理者IDを参照
+   - `loginUser`、`systemAdmin`、または `systemAdmin.id` が `null` の場合は `/admin` へリダイレクト
 
-3. **画面表示用データ設定**
-   - セッションから取得した `systemAdmin` オブジェクトを `admin` 属性としてリクエストに設定
-   - JSPで `admin` 属性を参照して情報を表示
+3. **DBから最新情報を取得**
+   - `SystemAdminDAO.selectById(adminId)` で管理者情報を取得
+   - 該当レコードがない場合は `/admin` へリダイレクト
 
-4. **ビューへフォワード**
+4. **Domainへの詰め替えとセッション同期**
+   - `ConvertUtil.toDomain(SystemAdminDTO)` で Domain オブジェクトへ変換
+   - 取得した情報でセッション内の `loginUser.systemAdmin` を更新
+
+5. **画面表示用データ設定**
+   - Domain オブジェクトを `admin` 属性としてリクエストに設定
+   - セッションに格納したフラッシュメッセージ（`flashSuccessMsg`）があればリクエストに移して表示
+
+6. **ビューへフォワード**
    - マイページビュー（`mypage/admin/home`）へフォワード
 
 ### トランザクション管理
 
-- **データベースアクセス不要**: セッション情報のみを使用するため、トランザクション不使用
-- `TransactionManager` は使用しない
+- **データベースアクセスあり**: 最新情報を表示するため `SystemAdminDAO` から取得
+- `TransactionManager` を使用してトランザクション境界を管理
 
 ### DAO呼び出し
 
-- **なし**: セッションから情報を取得するのみで、データベースアクセスは行わない
+- **SystemAdminDAO**
+  - `selectById(UUID id)`: 管理者情報を取得
 
 ### セキュリティ
 
