--- a/docs/機能定義/管理者/05_マイページ編集.md
+++ b/docs/機能定義/管理者/05_マイページ編集.md
@@ -12,23 +12,28 @@
 
 | HTTPメソッド | URL | 画面/処理名 | 説明 |
 |---|---|---|---|
-| GET | `/admin/id_edit` | 編集フォーム表示 | 現在の情報を初期値として編集フォームを表示 |
-| POST | `/admin/id_edit_done` | 編集確定処理 | バリデーション・更新実行・セッション更新 |
+| GET | `/admin/mypage/edit` | 編集フォーム表示 | 現在の情報を初期値として編集フォームを表示 |
+| POST | `/admin/mypage/edit_check` | 編集確認表示 | 入力内容の確認画面を表示 |
+| POST | `/admin/mypage/edit_done` | 編集確定処理 | バリデーション・更新実行・セッション更新 |
 
 ## 画面フロー
 
 ```
-[マイページ画面] (/admin/mypage)
+[マイページ画面] (/admin/mypage/home)
     ↓ 編集ボタンをクリック
-    ↓ GET /admin/id_edit
+    ↓ GET /admin/mypage/edit
     ↓
 [編集フォーム画面] - 現在の情報が初期表示
     ↓ メール・氏名・ふりがな・パスワード（任意）を入力
-    ↓ POST /admin/id_edit_done
+    ↓ POST /admin/mypage/edit_check
     |
     ├─ バリデーションエラー → [編集フォーム画面] へ戻る（エラーメッセージ表示）
-    ├─ メール重複エラー → [編集フォーム画面] へ戻る
-    └─ 更新成功 → [マイページ画面] (/admin/mypage) へリダイレクト（成功メッセージ表示）
+    └─ 入力に問題なし → [確認画面]
+            ↓ 内容を確認して修正の場合は POST /admin/mypage/edit
+            ↓ 問題なければ POST /admin/mypage/edit_done
+            |
+            ├─ バリデーションエラー（再チェック） → [編集フォーム画面]
+            └─ 更新成功 → [マイページ画面] (/admin/mypage/home) へリダイレクト（成功メッセージ表示）
 ```
 
 ## バックエンド処理詳細
@@ -37,75 +42,66 @@
 
 - **クラス**: [CommonService.java](../../../src/main/java/service/CommonService.java)
 - **メソッド**:
-  - `adminIdEditForm()` (374行目): 編集フォーム表示
-  - `adminIdEditSubmit()` (398行目): 編集確定処理
+  - `adminMyPageEdit()`: 編集フォーム表示
+  - `adminMyPageEditCheck()`: 編集確認画面
+  - `adminMyPageEditDone()`: 編集確定処理
 
 ### 処理フロー
 
-#### 1. 編集フォーム表示（GET `/admin/id_edit`）
+#### 1. 編集フォーム表示（GET `/admin/mypage/edit`）
 
 1. **セッションチェック**
    - セッションまたは `loginUser` が存在しない場合は `/admin` へリダイレクト
 
 2. **現在値の取得**
-   - セッションの `systemAdmin` から現在の情報を取得:
-     - `mail`: メールアドレス
-     - `name`: 氏名
-     - `nameRuby`: ふりがな
+   - `SystemAdminDAO.selectById(adminId)` で最新の管理者情報を取得
+   - `ConvertUtil.toDomain()` で Domain オブジェクトへ詰め替え
 
 3. **フォーム初期値設定**
-   - `form` 属性（Map）に現在値を格納してリクエストに設定
-   - JSPで初期値として表示
+   - `form` 属性（Map）に現在値、および戻り遷移時の入力値を格納し JSP で初期表示
 
 4. **ビューへフォワード**
    - 編集フォームビュー（`mypage/admin/edit`）へフォワード
 
-#### 2. 編集確定処理（POST `/admin/id_edit_done`）
+#### 2. 編集確認（POST `/admin/mypage/edit_check`）
 
 1. **セッションチェック**
    - セッションまたは `loginUser` が存在しない場合は `/admin` へリダイレクト
-   - 管理者IDを取得
 
-2. **入力パラメータ取得**
-   - `mail`: メールアドレス（必須）
-   - `name`: 氏名（必須）
-   - `nameRuby`: ふりがな（任意）
-   - `password`: パスワード（任意、空白の場合は変更なし）
+2. **入力値の保持**
+   - リクエストパラメータを `form` に格納し、再描画時に利用
 
 3. **バリデーション**
-   - 必須チェック: `validation.isNull("メールアドレス", mail)`
-   - 必須チェック: `validation.isNull("氏名", name)`
-   - エラー時: `errorMsg` をセットして編集フォームへ戻る
+   - 必須チェック: `mail`, `name`
+   - `mail` について自ID除外の重複チェック (`SystemAdminDAO.mailExistsExceptId`)
+   - パスワードが入力されている場合は `validation.isStrongPassword` で強度検証（8文字以上・英大小数字含む）
 
-4. **メール重複チェック**
-   - `SystemAdminDAO.mailExistsExceptId(mail, adminId)` で自分以外でメール重複チェック
-   - 重複時: "入力されたメールアドレスは既に使用されています。" エラー
+4. **ビューへフォワード**
+   - エラーがあれば編集フォームに戻りエラーメッセージを表示
+   - 問題がなければ確認ビュー（`mypage/admin/edit_check`）へフォワードし、パスワードは「入力あり/変更なし」で表示
 
-5. **現在情報の取得**
-   - `SystemAdminDAO.selectById(adminId)` で最新の管理者情報を取得
-   - 存在しない場合: "対象の管理者が見つかりません。" エラー
+#### 3. 編集確定処理（POST `/admin/mypage/edit_done`）
 
-6. **パスワード処理**
-   - パスワードが入力されている場合:
-     - 強度チェック: `validation.isStrongPassword(password)`（8文字以上、英大小数字含む）
-     - エラー時: `errorMsg` をセットして編集フォームへ戻る
-     - 成功時: `PasswordUtil.hashPassword(password)` でハッシュ化
-   - パスワードが空白の場合:
-     - 現在のパスワード（ハッシュ）を据え置き
+1. **セッションチェックと入力取得**
+   - `mail`, `name`, `nameRuby`, `password` を取得し、必須/強度チェックを再実施
 
-7. **データベース更新**
-   - `SystemAdminDAO.update(upd)` で更新実行
-   - 更新件数が1でない場合: "更新に失敗しました。" エラー
-   - トランザクションコミット
+2. **現在情報の取得と重複チェック**
+   - `SystemAdminDAO.selectById(adminId)` で現行データを取得
+   - 自分以外のメール重複 (`mailExistsExceptId`) を確認
 
-8. **セッション更新**
-   - セッションの `systemAdmin` オブジェクトを最新情報で更新:
-     - `mail`, `name`, `nameRuby` を更新
-   - セッションに再設定
+3. **更新データ組み立て**
+   - パスワード入力時のみ `PasswordUtil.hashPassword` でハッシュ化、それ以外は現行値を据え置き
+   - `nameRuby` は未入力時に `null` を設定
 
-9. **成功リダイレクト**
-   - `successMsg` 属性に "アカウント情報を更新しました。" を設定
-   - マイページ（`/admin/mypage`）へリダイレクト
+4. **データベース更新とコミット**
+   - `SystemAdminDAO.update(upd)` を実行し、成功時にトランザクションコミット
+
+5. **セッション更新とフラッシュメッセージ**
+   - 再取得した管理者情報で `loginUser.systemAdmin` を差し替え
+   - セッションに `flashSuccessMsg` を設定し、マイページ表示時に成功メッセージとして表示
+
+6. **成功リダイレクト**
+   - `/admin/mypage/home` へリダイレクト
 
 ### トランザクション管理
 
@@ -142,6 +138,7 @@ try (TransactionManager tm = new TransactionManager()) {
 ## ビューファイル
 
 - **編集フォーム画面**: [/WEB-INF/jsp/mypage/admin/edit.jsp](../../../src/main/webapp/WEB-INF/jsp/mypage/admin/edit.jsp)
+- **確認画面**: [/WEB-INF/jsp/mypage/admin/edit_check.jsp](../../../src/main/webapp/WEB-INF/jsp/mypage/admin/edit_check.jsp)
 
 ### 画面表示項目
 
@@ -152,10 +149,13 @@ try (TransactionManager tm = new TransactionManager()) {
 - **ふりがな**: `form.nameRuby`（任意）
 - **パスワード**: 初期値なし（任意、空白の場合は変更なし）
 
+また、`admin` 属性（SystemAdmin Domain）を利用して管理者ID・作成/更新日時・最終ログイン日時を表示する。
+
 ### 画面アクション
 
-- **更新ボタン**: POST `/admin/id_edit_done` で編集確定
-- **キャンセルボタン/戻るリンク**: マイページへ戻る
+- **確認するボタン**: POST `/admin/mypage/edit_check` で確認画面へ遷移
+- **編集画面の戻るリンク**: `/admin/mypage/home` へ戻る
+- **確認画面**: `修正する`（POST `/admin/mypage/edit`）、`更新する`（POST `/admin/mypage/edit_done`）
 
 ## データモデル
 
@@ -180,6 +180,9 @@ try (TransactionManager tm = new TransactionManager()) {
   - `mail`: メールアドレス
   - `name`: 氏名
   - `nameRuby`: ふりがな
+  - `password`: パスワード（確認画面での hidden 用）
+- **admin** (SystemAdmin): 管理者の最新情報（ID・日時など表示用）
+- **willChangePassword** (boolean): 確認画面でパスワード変更有無を表示するフラグ
 
 ## エラーハンドリング
 
@@ -205,4 +208,4 @@ try (TransactionManager tm = new TransactionManager()) {
 - メールアドレス変更時は即座にセッションに反映され、次回ログインから新しいメールアドレスでログイン可能
 - パスワード変更時も即座に反映されるが、現在のセッションは維持される（再ログイン不要）
 - ふりがなは任意項目のため、空白でも更新可能
-- 更新成功後は成功メッセージ（`successMsg`）がマイページに表示される
+- 更新成功後はセッションに保存した `flashSuccessMsg` が `/admin/mypage/home` で `successMsg` として表示される
